--- a/Prevu.Localization/Properties/Resources.ar.resx
+++ b/Prevu.Localization/Properties/Resources.ar.resx
@@ -9303,4 +9303,334 @@
   <data name="M_INFO_FILLING_DISAB" xml:space="preserve">
     <value>تمكين التعبئة للإنتاج من خلال إعدادات HMI</value>
   </data>
+  <data name="M_INFO_EMPTYING_MODE" xml:space="preserve">
+    <value>يتم تنشيط وضع التفريغ. قم باستعادة إعدادات HMI للإنتاج بمجرد الانتهاء من التفريغ</value>
+  </data>
+  <data name="STORAGE" xml:space="preserve">
+    <value>تخزين</value>
+  </data>
+  <data name="BAG_PRODUCTION" xml:space="preserve">
+    <value>إنتاج الأكياس</value>
+  </data>
+  <data name="KG_PRODUCTION" xml:space="preserve">
+    <value>كجم_الإنتاج</value>
+  </data>
+  <data name="BAGS STATION - BAGS" xml:space="preserve">
+    <value>محطة الحقائب - الحقائب</value>
+  </data>
+  <data name="DASHBOARD EDITOR" xml:space="preserve">
+    <value>محرر لوحة القيادة</value>
+  </data>
+  <data name="NO RECOVERY MODE" xml:space="preserve">
+    <value>لا يوجد وضع الاسترداد</value>
+  </data>
+  <data name="RECOVERY MODE FOR EMPTY HOPPER" xml:space="preserve">
+    <value>وضع الاسترداد للقادوس الفارغ</value>
+  </data>
+  <data name="SAFETY BARRIERS NOT OK" xml:space="preserve">
+    <value>حواجز السلامة ليست جيدة</value>
+  </data>
+  <data name="CONVEYOR LEFT LUBRICATION" xml:space="preserve">
+    <value>تشحيم الناقل الأيسر</value>
+  </data>
+  <data name="CONVEYOR RIGHT LUBRICATION" xml:space="preserve">
+    <value>التشحيم الصحيح للناقل</value>
+  </data>
+  <data name="DEBALER AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>ديبالر أوكس. وحدة هيدروليكية</value>
+  </data>
+  <data name="PREWASH WCE AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>الغسيل المسبق Wce Aux. وحدة هيدروليكية</value>
+  </data>
+  <data name="NOT_BYPASSED" xml:space="preserve">
+    <value>لا_تجاوز</value>
+  </data>
+  <data name="OFF LINE FEEDING" xml:space="preserve">
+    <value>التغذية خارج الخط</value>
+  </data>
+  <data name="CABINET POWER SWITCH" xml:space="preserve">
+    <value>مفتاح الطاقة لمجلس الوزراء</value>
+  </data>
+  <data name="CABINET POWER SWITCH NOT OK" xml:space="preserve">
+    <value>مفتاح الطاقة في الخزانة ليس على ما يرام</value>
+  </data>
+  <data name="GRINDER AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>طاحونة أوكس. وحدة هيدروليكية</value>
+  </data>
+  <data name="SILO EMPTYING MODE ACTIVATED" xml:space="preserve">
+    <value>تم تنشيط وضع تفريغ الصومعة</value>
+  </data>
+  <data name="NO EMPTYING" xml:space="preserve">
+    <value>لا إفراغ</value>
+  </data>
+  <data name="EMPTYING MODE SELECTED" xml:space="preserve">
+    <value>تم تحديد وضع التفريغ</value>
+  </data>
+  <data name="SILO EMPTYING MODE - BYPASS OF MINIMUM LEVEL" xml:space="preserve">
+    <value>وضع تفريغ الصومعة - تجاوز المستوى الأدنى</value>
+  </data>
+  <data name="CHEMICAL CONCENTRATION SENSOR" xml:space="preserve">
+    <value>مستشعر التركيز الكيميائي</value>
+  </data>
+  <data name="ANTIFOAM TO REACTOR 1" xml:space="preserve">
+    <value>مضاد الرغوة للمفاعل 1</value>
+  </data>
+  <data name="ANTIFOAM TO REACTOR 2" xml:space="preserve">
+    <value>مضاد الرغوة للمفاعل 2</value>
+  </data>
+  <data name="ANTIFOAM TO WASHING TANK" xml:space="preserve">
+    <value>مضاد الرغوة لخزان الغسيل</value>
+  </data>
+  <data name="MAXIMUM NUMBER OF AUTO-PURGE RESTART" xml:space="preserve">
+    <value>الحد الأقصى لعدد مرات إعادة تشغيل التطهير التلقائي</value>
+  </data>
+  <data name="NO PURGE" xml:space="preserve">
+    <value>لا تطهير</value>
+  </data>
+  <data name="STOP FOR AUTO-PURGE" xml:space="preserve">
+    <value>توقف عن التطهير التلقائي</value>
+  </data>
+  <data name="NO PADDLES STOPPING" xml:space="preserve">
+    <value>لا توقف المجاذيف</value>
+  </data>
+  <data name="PADDLES STOPPING SPEED SELECTED" xml:space="preserve">
+    <value>تم تحديد سرعة إيقاف المجاذيف</value>
+  </data>
+  <data name="FLOWRATE SENSOR OK" xml:space="preserve">
+    <value>مستشعر معدل التدفق موافق</value>
+  </data>
+  <data name="SENSOR NOT OK FOR MODULATION" xml:space="preserve">
+    <value>المستشعر غير مناسب للتعديل</value>
+  </data>
+  <data name="WATER NOT AVAILABLE" xml:space="preserve">
+    <value>المياه غير متوفرة</value>
+  </data>
+  <data name="ACTUAL SETPOINT" xml:space="preserve">
+    <value>نقطة الضبط الفعلية</value>
+  </data>
+  <data name="CONSTANT MODE COMMAND" xml:space="preserve">
+    <value>أمر الوضع الثابت</value>
+  </data>
+  <data name="MAINTENANCE COMMAND" xml:space="preserve">
+    <value>أمر الصيانة</value>
+  </data>
+  <data name="MODULATION SETUP" xml:space="preserve">
+    <value>إعداد التعديل</value>
+  </data>
+  <data name="NOT USED" xml:space="preserve">
+    <value>غير مستعمل</value>
+  </data>
+  <data name="ABOVE LOW LEVEL" xml:space="preserve">
+    <value>فوق المستوى المنخفض</value>
+  </data>
+  <data name="SCREW STOPPED FOR MATERIAL BELOW LOW LEVEL" xml:space="preserve">
+    <value>توقف المسمار للمواد تحت المستوى المنخفض</value>
+  </data>
+  <data name="AUTOMATIC FILTER" xml:space="preserve">
+    <value>التصفية التلقائية</value>
+  </data>
+  <data name="(1=EXT AIR FILTER READY)" xml:space="preserve">
+    <value>(1=فلتر الهواء الإضافي جاهز)</value>
+  </data>
+  <data name="EXTERNAL FILTER OFF" xml:space="preserve">
+    <value>عامل التصفية الخارجي معطل</value>
+  </data>
+  <data name="BAGS STATION - SHAKE BAG" xml:space="preserve">
+    <value>محطة الحقائب - شيك باج</value>
+  </data>
+  <data name="COMMAND BAG UP" xml:space="preserve">
+    <value>حقيبة القيادة لأعلى</value>
+  </data>
+  <data name="(1=UP)" xml:space="preserve">
+    <value>(1=أعلى)</value>
+  </data>
+  <data name="BAG SAFETY BARRIER" xml:space="preserve">
+    <value>حاجز سلامة الحقيبة</value>
+  </data>
+  <data name="BAG SAFETY BARRIERS NOT OK" xml:space="preserve">
+    <value>حواجز سلامة الحقيبة ليست جيدة</value>
+  </data>
+  <data name="BAG PRESENT" xml:space="preserve">
+    <value>حقيبة الحاضر</value>
+  </data>
+  <data name="BAG NOT PRESENT" xml:space="preserve">
+    <value>الحقيبة غير موجودة</value>
+  </data>
+  <data name="MATERIAL DIRECTED HERE" xml:space="preserve">
+    <value>المواد الموجهة هنا</value>
+  </data>
+  <data name="MATERIAL IS DIRECTED TO THE OTHER BAG" xml:space="preserve">
+    <value>يتم توجيه المواد إلى الحقيبة الأخرى</value>
+  </data>
+  <data name="BAGS STATION - DIVERTER" xml:space="preserve">
+    <value>محطة الحقائب - المحول</value>
+  </data>
+  <data name="BAGS STATION - BAG" xml:space="preserve">
+    <value>محطة الحقائب - حقيبة</value>
+  </data>
+  <data name="BAG SHAKE REQUEST" xml:space="preserve">
+    <value>طلب هز الحقيبة</value>
+  </data>
+  <data name="BAG PRESENT SENSOR" xml:space="preserve">
+    <value>حقيبة الاستشعار الحالية</value>
+  </data>
+  <data name="(1=PRESENT)" xml:space="preserve">
+    <value>(1=حاضر)</value>
+  </data>
+  <data name="BAG GREEN RED" xml:space="preserve">
+    <value>حقيبة خضراء حمراء</value>
+  </data>
+  <data name="BAG GREEN LAMP" xml:space="preserve">
+    <value>حقيبة المصباح الأخضر</value>
+  </data>
+  <data name="(1= OK FLSH=FILLING)" xml:space="preserve">
+    <value>(1= طيب فلش = الحشوة)</value>
+  </data>
+  <data name="BAG LAMP RED" xml:space="preserve">
+    <value>مصباح حقيبة أحمر</value>
+  </data>
+  <data name="BAG FULL" xml:space="preserve">
+    <value>الحقيبة ممتلئة</value>
+  </data>
+  <data name="BAG NO MORE DETECTED" xml:space="preserve">
+    <value>لم يتم اكتشاف الحقيبة بعد الآن</value>
+  </data>
+  <data name="BAG NOT FULL" xml:space="preserve">
+    <value>الحقيبة غير ممتلئة</value>
+  </data>
+  <data name="BAG FULL. REMOVE BAG" xml:space="preserve">
+    <value>الحقيبة ممتلئة. إزالة الحقيبة</value>
+  </data>
+  <data name="BAG MAXIMUM LEVEL NOT OK" xml:space="preserve">
+    <value>الحد الأقصى لمستوى الحقيبة ليس جيدًا</value>
+  </data>
+  <data name="NO BAG LIFT UP" xml:space="preserve">
+    <value>لا يوجد رفع للحقيبة</value>
+  </data>
+  <data name="BAG LIFTING UP" xml:space="preserve">
+    <value>رفع الحقيبة</value>
+  </data>
+  <data name="SHAKING VALVE ENABLED" xml:space="preserve">
+    <value>تمكين صمام الاهتزاز</value>
+  </data>
+  <data name="SHAKING VALVE NOT ENABLED" xml:space="preserve">
+    <value>صمام الاهتزاز غير ممكن</value>
+  </data>
+  <data name="BAGS STATION - BAGS " xml:space="preserve">
+    <value>محطة الحقائب - الحقائب</value>
+  </data>
+  <data name="BAGS STATION - MANAGER" xml:space="preserve">
+    <value>محطة الحقائب - مدير</value>
+  </data>
+  <data name="SAFETY GREEN RED" xml:space="preserve">
+    <value>سلامة الأخضر الأحمر</value>
+  </data>
+  <data name="SAFETY GREEN LAMP" xml:space="preserve">
+    <value>مصباح السلامة الأخضر</value>
+  </data>
+  <data name="(1= OK)" xml:space="preserve">
+    <value>(1= طيب)</value>
+  </data>
+  <data name="SAFETY RED LAMP" xml:space="preserve">
+    <value>مصباح السلامة الأحمر</value>
+  </data>
+  <data name="(SLOW =NOT OK FAST=ALARM)" xml:space="preserve">
+    <value>(بطيء = ليس جيدًا سريعًا = إنذار)</value>
+  </data>
+  <data name="SAFETY BARRIERS NOT OK TIMEOUT - BAGS CANNOT BE SHAKED" xml:space="preserve">
+    <value>حواجز السلامة ليست مناسبة، المهلة - لا يمكن هز الحقائب</value>
+  </data>
+  <data name="ENABLED FOR FILLING BAG" xml:space="preserve">
+    <value>تمكين لملء الحقيبة</value>
+  </data>
+  <data name="FILLING NOT ENABLED - BAG" xml:space="preserve">
+    <value>التعبئة غير ممكّنة - الحقيبة</value>
+  </data>
+  <data name="PRESENCE OF BAG" xml:space="preserve">
+    <value>وجود الحقيبة</value>
+  </data>
+  <data name="BAG NOT PRESENT - BAG" xml:space="preserve">
+    <value>الحقيبة غير موجودة - الحقيبة</value>
+  </data>
+  <data name="AT LEAST ONE DEVICE IS NOT READY" xml:space="preserve">
+    <value>جهاز واحد على الأقل غير جاهز</value>
+  </data>
+  <data name="SHAKING TIME OK" xml:space="preserve">
+    <value>اهتزاز الوقت حسنا</value>
+  </data>
+  <data name="SHAKING TIME IS SET TO ZERO" xml:space="preserve">
+    <value>تم ضبط وقت الاهتزاز على الصفر</value>
+  </data>
+  <data name="COMPACTION TIME OK" xml:space="preserve">
+    <value>وقت الضغط موافق</value>
+  </data>
+  <data name="COMPACTION TIME IS SET TO ZERO" xml:space="preserve">
+    <value>تم ضبط وقت الضغط على الصفر</value>
+  </data>
+  <data name="COMPACTION NOT IN PROGRESS" xml:space="preserve">
+    <value>الضغط ليس في التقدم</value>
+  </data>
+  <data name="BAG COMPACTION FOR MAXIMUM LEVEL" xml:space="preserve">
+    <value>ضغط الحقيبة للحصول على أقصى مستوى</value>
+  </data>
+  <data name="NOT FULL BAG" xml:space="preserve">
+    <value>ليست حقيبة كاملة</value>
+  </data>
+  <data name="FILLING COMPLETED OF BAG" xml:space="preserve">
+    <value>اكتمال ملء الحقيبة</value>
+  </data>
+  <data name="NOT FULL BAGS" xml:space="preserve">
+    <value>ليست أكياس كاملة</value>
+  </data>
+  <data name="FILLING COMPLETED OF BOTH BAGS" xml:space="preserve">
+    <value>اكتمل ملء كلا الحقيبتين</value>
+  </data>
+  <data name="BAGS PER HOUR" xml:space="preserve">
+    <value>أكياس لكل ساعة</value>
+  </data>
+  <data name="ESTIMATED PRODUCTION" xml:space="preserve">
+    <value>الإنتاج المقدر</value>
+  </data>
+  <data name="SHAKING OF THE BAGS" xml:space="preserve">
+    <value>هز الحقائب</value>
+  </data>
+  <data name="ON TIME (BAG UP)" xml:space="preserve">
+    <value>في الوقت المحدد (رفع الحقيبة)</value>
+  </data>
+  <data name="PAUSE TIME (BAG DOWN)" xml:space="preserve">
+    <value>وقت الإيقاف المؤقت (الحقيبة لأسفل)</value>
+  </data>
+  <data name="BAG COMPACTION FOR MAXIMUM LEVEL REACHED" xml:space="preserve">
+    <value>ضغط الكيس للوصول إلى الحد الأقصى للمستوى</value>
+  </data>
+  <data name="MAXIMUM NUMBER OF COMPACTIONS (BAG FULL)" xml:space="preserve">
+    <value>الحد الأقصى لعدد الضغطات (الكيس ممتلئ)</value>
+  </data>
+  <data name="COMPACTIONS DONE FOR BAG" xml:space="preserve">
+    <value>تم الضغط على الحقيبة</value>
+  </data>
+  <data name="STATISTICS" xml:space="preserve">
+    <value>إحصائيات</value>
+  </data>
+  <data name="AVERAGE BAG FILLING DURATION" xml:space="preserve">
+    <value>متوسط ​​مدة تعبئة الكيس</value>
+  </data>
+  <data name="PN COMMUNICATION OK" xml:space="preserve">
+    <value>التواصل Pn طيب</value>
+  </data>
+  <data name="PROFINET COMMUNICATION NOT OK" xml:space="preserve">
+    <value>الاتصالات Profinet ليست على ما يرام</value>
+  </data>
+  <data name="E-STOP - PUSH-BUTTON RELAY STATUS" xml:space="preserve">
+    <value>E-Stop - حالة تتابع الضغط على الزر</value>
+  </data>
+  <data name="SYS - E-STOP - PUSH-BUTTON RELAY STATUS" xml:space="preserve">
+    <value>Sys - E-Stop - حالة تتابع الضغط على الزر</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON COLLECTING SAFETY RELAY NOT OK" xml:space="preserve">
+    <value>Estop الضغط على زر جمع مرحل الأمان ليس جيدًا</value>
+  </data>
+  <data name="SYSTEM CONTROL PLC" xml:space="preserve">
+    <value>شركة نظام التحكم</value>
+  </data>
 </root>
