--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -9303,4 +9303,334 @@
   <data name="M_INFO_FILLING_DISAB" xml:space="preserve">
     <value>Aktivieren Sie die Abfüllung für die Produktion über die HMI-Einstellungen</value>
   </data>
+  <data name="M_INFO_EMPTYING_MODE" xml:space="preserve">
+    <value>Der Entleerungsmodus ist aktiviert. Stellen Sie die HMI-Einstellungen für die Produktion wieder her, sobald die Entleerung abgeschlossen ist</value>
+  </data>
+  <data name="STORAGE" xml:space="preserve">
+    <value>Lagerung</value>
+  </data>
+  <data name="BAG_PRODUCTION" xml:space="preserve">
+    <value>Taschenproduktion</value>
+  </data>
+  <data name="KG_PRODUCTION" xml:space="preserve">
+    <value>Kg_Produktion</value>
+  </data>
+  <data name="BAGS STATION - BAGS" xml:space="preserve">
+    <value>Taschenstation - Taschen</value>
+  </data>
+  <data name="DASHBOARD EDITOR" xml:space="preserve">
+    <value>Dashboard-Editor</value>
+  </data>
+  <data name="NO RECOVERY MODE" xml:space="preserve">
+    <value>Kein Wiederherstellungsmodus</value>
+  </data>
+  <data name="RECOVERY MODE FOR EMPTY HOPPER" xml:space="preserve">
+    <value>Wiederherstellungsmodus für leeren Trichter</value>
+  </data>
+  <data name="SAFETY BARRIERS NOT OK" xml:space="preserve">
+    <value>Sicherheitsbarrieren nicht in Ordnung</value>
+  </data>
+  <data name="CONVEYOR LEFT LUBRICATION" xml:space="preserve">
+    <value>Schmierung des linken Förderers</value>
+  </data>
+  <data name="CONVEYOR RIGHT LUBRICATION" xml:space="preserve">
+    <value>Rechte Schmierung des Förderers</value>
+  </data>
+  <data name="DEBALER AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>Debaler Aux. Hydraulikeinheit</value>
+  </data>
+  <data name="PREWASH WCE AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>Vorwäsche Wce Aux. Hydraulikeinheit</value>
+  </data>
+  <data name="NOT_BYPASSED" xml:space="preserve">
+    <value>Nicht_umgangen</value>
+  </data>
+  <data name="OFF LINE FEEDING" xml:space="preserve">
+    <value>Offline-Fütterung</value>
+  </data>
+  <data name="CABINET POWER SWITCH" xml:space="preserve">
+    <value>Schranknetzschalter</value>
+  </data>
+  <data name="CABINET POWER SWITCH NOT OK" xml:space="preserve">
+    <value>Schranknetzschalter nicht in Ordnung</value>
+  </data>
+  <data name="GRINDER AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>Mühle Aux. Hydraulikeinheit</value>
+  </data>
+  <data name="SILO EMPTYING MODE ACTIVATED" xml:space="preserve">
+    <value>Silo-Entleerungsmodus aktiviert</value>
+  </data>
+  <data name="NO EMPTYING" xml:space="preserve">
+    <value>Kein Entleeren</value>
+  </data>
+  <data name="EMPTYING MODE SELECTED" xml:space="preserve">
+    <value>Entleerungsmodus ausgewählt</value>
+  </data>
+  <data name="SILO EMPTYING MODE - BYPASS OF MINIMUM LEVEL" xml:space="preserve">
+    <value>Silo-Entleerungsmodus – Umgehung des Mindestfüllstands</value>
+  </data>
+  <data name="CHEMICAL CONCENTRATION SENSOR" xml:space="preserve">
+    <value>Chemischer Konzentrationssensor</value>
+  </data>
+  <data name="ANTIFOAM TO REACTOR 1" xml:space="preserve">
+    <value>Antischaummittel zum Reaktor 1</value>
+  </data>
+  <data name="ANTIFOAM TO REACTOR 2" xml:space="preserve">
+    <value>Antischaummittel zum Reaktor 2</value>
+  </data>
+  <data name="ANTIFOAM TO WASHING TANK" xml:space="preserve">
+    <value>Antischaummittel zum Waschtank</value>
+  </data>
+  <data name="MAXIMUM NUMBER OF AUTO-PURGE RESTART" xml:space="preserve">
+    <value>Maximale Anzahl von Auto-Purge-Neustarts</value>
+  </data>
+  <data name="NO PURGE" xml:space="preserve">
+    <value>Keine Säuberung</value>
+  </data>
+  <data name="STOP FOR AUTO-PURGE" xml:space="preserve">
+    <value>Stoppen Sie die automatische Spülung</value>
+  </data>
+  <data name="NO PADDLES STOPPING" xml:space="preserve">
+    <value>Keine Paddel stoppen</value>
+  </data>
+  <data name="PADDLES STOPPING SPEED SELECTED" xml:space="preserve">
+    <value>Paddel-Stoppgeschwindigkeit ausgewählt</value>
+  </data>
+  <data name="FLOWRATE SENSOR OK" xml:space="preserve">
+    <value>Durchflusssensor ok</value>
+  </data>
+  <data name="SENSOR NOT OK FOR MODULATION" xml:space="preserve">
+    <value>Der Sensor ist für die Modulation nicht geeignet</value>
+  </data>
+  <data name="WATER NOT AVAILABLE" xml:space="preserve">
+    <value>Wasser nicht verfügbar</value>
+  </data>
+  <data name="ACTUAL SETPOINT" xml:space="preserve">
+    <value>Tatsächlicher Sollwert</value>
+  </data>
+  <data name="CONSTANT MODE COMMAND" xml:space="preserve">
+    <value>Befehl „Konstanter Modus“</value>
+  </data>
+  <data name="MAINTENANCE COMMAND" xml:space="preserve">
+    <value>Wartungsbefehl</value>
+  </data>
+  <data name="MODULATION SETUP" xml:space="preserve">
+    <value>Modulations-Setup</value>
+  </data>
+  <data name="NOT USED" xml:space="preserve">
+    <value>Nicht benutzt</value>
+  </data>
+  <data name="ABOVE LOW LEVEL" xml:space="preserve">
+    <value>Über niedrigem Niveau</value>
+  </data>
+  <data name="SCREW STOPPED FOR MATERIAL BELOW LOW LEVEL" xml:space="preserve">
+    <value>Schnecke gestoppt, weil Material unter niedrigem Füllstand ist</value>
+  </data>
+  <data name="AUTOMATIC FILTER" xml:space="preserve">
+    <value>Automatischer Filter</value>
+  </data>
+  <data name="(1=EXT AIR FILTER READY)" xml:space="preserve">
+    <value>(1=Ext. Luftfilter bereit)</value>
+  </data>
+  <data name="EXTERNAL FILTER OFF" xml:space="preserve">
+    <value>Externer Filter aus</value>
+  </data>
+  <data name="BAGS STATION - SHAKE BAG" xml:space="preserve">
+    <value>Taschenstation - Beutel schütteln</value>
+  </data>
+  <data name="COMMAND BAG UP" xml:space="preserve">
+    <value>Befehlstasche hoch</value>
+  </data>
+  <data name="(1=UP)" xml:space="preserve">
+    <value>(1=Nach oben)</value>
+  </data>
+  <data name="BAG SAFETY BARRIER" xml:space="preserve">
+    <value>Sicherheitsbarriere für Taschen</value>
+  </data>
+  <data name="BAG SAFETY BARRIERS NOT OK" xml:space="preserve">
+    <value>Taschensicherheitsbarrieren nicht in Ordnung</value>
+  </data>
+  <data name="BAG PRESENT" xml:space="preserve">
+    <value>Tasche vorhanden</value>
+  </data>
+  <data name="BAG NOT PRESENT" xml:space="preserve">
+    <value>Tasche nicht vorhanden</value>
+  </data>
+  <data name="MATERIAL DIRECTED HERE" xml:space="preserve">
+    <value>Material, das hierher geleitet wird</value>
+  </data>
+  <data name="MATERIAL IS DIRECTED TO THE OTHER BAG" xml:space="preserve">
+    <value>Das Material wird in die andere Tasche geleitet</value>
+  </data>
+  <data name="BAGS STATION - DIVERTER" xml:space="preserve">
+    <value>Taschenstation – Umsteller</value>
+  </data>
+  <data name="BAGS STATION - BAG" xml:space="preserve">
+    <value>Taschenstation - Tasche</value>
+  </data>
+  <data name="BAG SHAKE REQUEST" xml:space="preserve">
+    <value>Bitte um Taschenschütteln</value>
+  </data>
+  <data name="BAG PRESENT SENSOR" xml:space="preserve">
+    <value>Beutelanwesenheitssensor</value>
+  </data>
+  <data name="(1=PRESENT)" xml:space="preserve">
+    <value>(1=Anwesend)</value>
+  </data>
+  <data name="BAG GREEN RED" xml:space="preserve">
+    <value>Tasche Grün Rot</value>
+  </data>
+  <data name="BAG GREEN LAMP" xml:space="preserve">
+    <value>Tasche grüne Lampe</value>
+  </data>
+  <data name="(1= OK FLSH=FILLING)" xml:space="preserve">
+    <value>(1= Ok Flsh=Füllung)</value>
+  </data>
+  <data name="BAG LAMP RED" xml:space="preserve">
+    <value>Taschenlampe Rot</value>
+  </data>
+  <data name="BAG FULL" xml:space="preserve">
+    <value>Tasche voll</value>
+  </data>
+  <data name="BAG NO MORE DETECTED" xml:space="preserve">
+    <value>Keine Tasche mehr erkannt</value>
+  </data>
+  <data name="BAG NOT FULL" xml:space="preserve">
+    <value>Tasche nicht voll</value>
+  </data>
+  <data name="BAG FULL. REMOVE BAG" xml:space="preserve">
+    <value>Tasche voll. Beutel entfernen</value>
+  </data>
+  <data name="BAG MAXIMUM LEVEL NOT OK" xml:space="preserve">
+    <value>Maximaler Füllstand des Beutels nicht in Ordnung</value>
+  </data>
+  <data name="NO BAG LIFT UP" xml:space="preserve">
+    <value>Kein Anheben der Tasche</value>
+  </data>
+  <data name="BAG LIFTING UP" xml:space="preserve">
+    <value>Beutel wird hochgehoben</value>
+  </data>
+  <data name="SHAKING VALVE ENABLED" xml:space="preserve">
+    <value>Schüttelventil aktiviert</value>
+  </data>
+  <data name="SHAKING VALVE NOT ENABLED" xml:space="preserve">
+    <value>Schüttelventil nicht aktiviert</value>
+  </data>
+  <data name="BAGS STATION - BAGS " xml:space="preserve">
+    <value>Taschenstation - Taschen</value>
+  </data>
+  <data name="BAGS STATION - MANAGER" xml:space="preserve">
+    <value>Taschenstation – Manager</value>
+  </data>
+  <data name="SAFETY GREEN RED" xml:space="preserve">
+    <value>Sicherheit Grün Rot</value>
+  </data>
+  <data name="SAFETY GREEN LAMP" xml:space="preserve">
+    <value>Grüne Sicherheitslampe</value>
+  </data>
+  <data name="(1= OK)" xml:space="preserve">
+    <value>(1=OK)</value>
+  </data>
+  <data name="SAFETY RED LAMP" xml:space="preserve">
+    <value>Rote Sicherheitslampe</value>
+  </data>
+  <data name="(SLOW =NOT OK FAST=ALARM)" xml:space="preserve">
+    <value>(Langsam = nicht in Ordnung, schnell = Alarm)</value>
+  </data>
+  <data name="SAFETY BARRIERS NOT OK TIMEOUT - BAGS CANNOT BE SHAKED" xml:space="preserve">
+    <value>Sicherheitsbarrieren nicht in Ordnung. Zeitüberschreitung – Taschen können nicht geschüttelt werden</value>
+  </data>
+  <data name="ENABLED FOR FILLING BAG" xml:space="preserve">
+    <value>Aktiviert zum Befüllen von Beuteln</value>
+  </data>
+  <data name="FILLING NOT ENABLED - BAG" xml:space="preserve">
+    <value>Befüllung nicht aktiviert – Beutel</value>
+  </data>
+  <data name="PRESENCE OF BAG" xml:space="preserve">
+    <value>Vorhandensein einer Tasche</value>
+  </data>
+  <data name="BAG NOT PRESENT - BAG" xml:space="preserve">
+    <value>Tasche nicht vorhanden - Tasche</value>
+  </data>
+  <data name="AT LEAST ONE DEVICE IS NOT READY" xml:space="preserve">
+    <value>Mindestens ein Gerät ist nicht bereit</value>
+  </data>
+  <data name="SHAKING TIME OK" xml:space="preserve">
+    <value>Schüttelzeit Ok</value>
+  </data>
+  <data name="SHAKING TIME IS SET TO ZERO" xml:space="preserve">
+    <value>Die Schüttelzeit ist auf Null eingestellt</value>
+  </data>
+  <data name="COMPACTION TIME OK" xml:space="preserve">
+    <value>Verdichtungszeit ok</value>
+  </data>
+  <data name="COMPACTION TIME IS SET TO ZERO" xml:space="preserve">
+    <value>Die Verdichtungszeit ist auf Null gesetzt</value>
+  </data>
+  <data name="COMPACTION NOT IN PROGRESS" xml:space="preserve">
+    <value>Komprimierung nicht im Gange</value>
+  </data>
+  <data name="BAG COMPACTION FOR MAXIMUM LEVEL" xml:space="preserve">
+    <value>Beutelverdichtung für maximales Niveau</value>
+  </data>
+  <data name="NOT FULL BAG" xml:space="preserve">
+    <value>Nicht volle Tasche</value>
+  </data>
+  <data name="FILLING COMPLETED OF BAG" xml:space="preserve">
+    <value>Befüllung des Beutels abgeschlossen</value>
+  </data>
+  <data name="NOT FULL BAGS" xml:space="preserve">
+    <value>Keine vollen Taschen</value>
+  </data>
+  <data name="FILLING COMPLETED OF BOTH BAGS" xml:space="preserve">
+    <value>Befüllung beider Beutel abgeschlossen</value>
+  </data>
+  <data name="BAGS PER HOUR" xml:space="preserve">
+    <value>Säcke pro Stunde</value>
+  </data>
+  <data name="ESTIMATED PRODUCTION" xml:space="preserve">
+    <value>Geschätzte Produktion</value>
+  </data>
+  <data name="SHAKING OF THE BAGS" xml:space="preserve">
+    <value>Schütteln der Taschen</value>
+  </data>
+  <data name="ON TIME (BAG UP)" xml:space="preserve">
+    <value>Pünktlich (Einpacken)</value>
+  </data>
+  <data name="PAUSE TIME (BAG DOWN)" xml:space="preserve">
+    <value>Pausenzeit (Tasche runter)</value>
+  </data>
+  <data name="BAG COMPACTION FOR MAXIMUM LEVEL REACHED" xml:space="preserve">
+    <value>Beutelverdichtung für maximales Niveau erreicht</value>
+  </data>
+  <data name="MAXIMUM NUMBER OF COMPACTIONS (BAG FULL)" xml:space="preserve">
+    <value>Maximale Anzahl an Verdichtungen (Beutel voll)</value>
+  </data>
+  <data name="COMPACTIONS DONE FOR BAG" xml:space="preserve">
+    <value>Verdichtungen für Beutel durchgeführt</value>
+  </data>
+  <data name="STATISTICS" xml:space="preserve">
+    <value>Statistiken</value>
+  </data>
+  <data name="AVERAGE BAG FILLING DURATION" xml:space="preserve">
+    <value>Durchschnittliche Beutelfülldauer</value>
+  </data>
+  <data name="PN COMMUNICATION OK" xml:space="preserve">
+    <value>Pn-Kommunikation Ok</value>
+  </data>
+  <data name="PROFINET COMMUNICATION NOT OK" xml:space="preserve">
+    <value>Profinet-Kommunikation nicht in Ordnung</value>
+  </data>
+  <data name="E-STOP - PUSH-BUTTON RELAY STATUS" xml:space="preserve">
+    <value>Not-Aus – Status des Drucktastenrelais</value>
+  </data>
+  <data name="SYS - E-STOP - PUSH-BUTTON RELAY STATUS" xml:space="preserve">
+    <value>Sys – E-Stop – Status des Drucktastenrelais</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON COLLECTING SAFETY RELAY NOT OK" xml:space="preserve">
+    <value>Estop-Druckknopf-Sammelsicherheitsrelais nicht in Ordnung</value>
+  </data>
+  <data name="SYSTEM CONTROL PLC" xml:space="preserve">
+    <value>Systemsteuerungsplc</value>
+  </data>
 </root>
