--- a/Prevu.Localization/Properties/Resources.es.resx
+++ b/Prevu.Localization/Properties/Resources.es.resx
@@ -6206,7 +6206,7 @@
     <value>Alimentación</value>
   </data>
   <data name="HOT WASH" xml:space="preserve">
-    <value>Lavado en caliente</value>
+    <value>Lav. Caliente</value>
   </data>
   <data name="RINSING" xml:space="preserve">
     <value>Enjuague</value>
@@ -9303,5 +9303,335 @@
   </data>
   <data name="M_INFO_FILLING_DISAB" xml:space="preserve">
     <value>Habilite el llenado para producción a través de la configuración de HMI</value>
+  </data>
+  <data name="M_INFO_EMPTYING_MODE" xml:space="preserve">
+    <value>El modo de vaciado está activado. Restaure la configuración de HMI para producción tan pronto como finalice el vaciado</value>
+  </data>
+  <data name="STORAGE" xml:space="preserve">
+    <value>Almacenamiento</value>
+  </data>
+  <data name="BAG_PRODUCTION" xml:space="preserve">
+    <value>Bolsa_Producción</value>
+  </data>
+  <data name="KG_PRODUCTION" xml:space="preserve">
+    <value>Kg_Producción</value>
+  </data>
+  <data name="BAGS STATION - BAGS" xml:space="preserve">
+    <value>Estación de Bolsas - Bolsas</value>
+  </data>
+  <data name="DASHBOARD EDITOR" xml:space="preserve">
+    <value>Editor de panel</value>
+  </data>
+  <data name="NO RECOVERY MODE" xml:space="preserve">
+    <value>Sin modo de recuperación</value>
+  </data>
+  <data name="RECOVERY MODE FOR EMPTY HOPPER" xml:space="preserve">
+    <value>Modo de recuperación para tolva vacía</value>
+  </data>
+  <data name="SAFETY BARRIERS NOT OK" xml:space="preserve">
+    <value>Las barreras de seguridad no están bien</value>
+  </data>
+  <data name="CONVEYOR LEFT LUBRICATION" xml:space="preserve">
+    <value>Lubricación izquierda del transportador</value>
+  </data>
+  <data name="CONVEYOR RIGHT LUBRICATION" xml:space="preserve">
+    <value>Lubricación derecha del transportador</value>
+  </data>
+  <data name="DEBALER AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>Debaler Aux. Unidad hidraulica</value>
+  </data>
+  <data name="PREWASH WCE AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>Prelavado Wce Aux. Unidad hidraulica</value>
+  </data>
+  <data name="NOT_BYPASSED" xml:space="preserve">
+    <value>No_omitido</value>
+  </data>
+  <data name="OFF LINE FEEDING" xml:space="preserve">
+    <value>Alimentación fuera de línea</value>
+  </data>
+  <data name="CABINET POWER SWITCH" xml:space="preserve">
+    <value>Interruptor de alimentación del gabinete</value>
+  </data>
+  <data name="CABINET POWER SWITCH NOT OK" xml:space="preserve">
+    <value>El interruptor de alimentación del gabinete no está bien</value>
+  </data>
+  <data name="GRINDER AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>Amoladora auxiliar. Unidad hidraulica</value>
+  </data>
+  <data name="SILO EMPTYING MODE ACTIVATED" xml:space="preserve">
+    <value>Modo Vaciado Silo Activado</value>
+  </data>
+  <data name="NO EMPTYING" xml:space="preserve">
+    <value>Sin vaciar</value>
+  </data>
+  <data name="EMPTYING MODE SELECTED" xml:space="preserve">
+    <value>Modo de vaciado seleccionado</value>
+  </data>
+  <data name="SILO EMPTYING MODE - BYPASS OF MINIMUM LEVEL" xml:space="preserve">
+    <value>Modo de vaciado de silo: derivación del nivel mínimo</value>
+  </data>
+  <data name="CHEMICAL CONCENTRATION SENSOR" xml:space="preserve">
+    <value>Sensor de concentración química</value>
+  </data>
+  <data name="ANTIFOAM TO REACTOR 1" xml:space="preserve">
+    <value>Antiespumante al reactor 1</value>
+  </data>
+  <data name="ANTIFOAM TO REACTOR 2" xml:space="preserve">
+    <value>Antiespumante al reactor 2</value>
+  </data>
+  <data name="ANTIFOAM TO WASHING TANK" xml:space="preserve">
+    <value>Antiespumante al tanque de lavado</value>
+  </data>
+  <data name="MAXIMUM NUMBER OF AUTO-PURGE RESTART" xml:space="preserve">
+    <value>Número máximo de reinicios de purga automática</value>
+  </data>
+  <data name="NO PURGE" xml:space="preserve">
+    <value>Sin purga</value>
+  </data>
+  <data name="STOP FOR AUTO-PURGE" xml:space="preserve">
+    <value>Detener para purga automática</value>
+  </data>
+  <data name="NO PADDLES STOPPING" xml:space="preserve">
+    <value>Sin paletas parando</value>
+  </data>
+  <data name="PADDLES STOPPING SPEED SELECTED" xml:space="preserve">
+    <value>Velocidad de parada de las paletas seleccionada</value>
+  </data>
+  <data name="FLOWRATE SENSOR OK" xml:space="preserve">
+    <value>Sensor de caudal correcto</value>
+  </data>
+  <data name="SENSOR NOT OK FOR MODULATION" xml:space="preserve">
+    <value>El sensor no está bien para la modulación</value>
+  </data>
+  <data name="WATER NOT AVAILABLE" xml:space="preserve">
+    <value>Agua no disponible</value>
+  </data>
+  <data name="ACTUAL SETPOINT" xml:space="preserve">
+    <value>Punto de ajuste real</value>
+  </data>
+  <data name="CONSTANT MODE COMMAND" xml:space="preserve">
+    <value>Comando de modo constante</value>
+  </data>
+  <data name="MAINTENANCE COMMAND" xml:space="preserve">
+    <value>Comando de mantenimiento</value>
+  </data>
+  <data name="MODULATION SETUP" xml:space="preserve">
+    <value>Configuración de modulación</value>
+  </data>
+  <data name="NOT USED" xml:space="preserve">
+    <value>No utilizado</value>
+  </data>
+  <data name="ABOVE LOW LEVEL" xml:space="preserve">
+    <value>Por encima del nivel bajo</value>
+  </data>
+  <data name="SCREW STOPPED FOR MATERIAL BELOW LOW LEVEL" xml:space="preserve">
+    <value>Tornillo detenido para material por debajo del nivel bajo</value>
+  </data>
+  <data name="AUTOMATIC FILTER" xml:space="preserve">
+    <value>Filtro automático</value>
+  </data>
+  <data name="(1=EXT AIR FILTER READY)" xml:space="preserve">
+    <value>(1=Filtro de aire externo listo)</value>
+  </data>
+  <data name="EXTERNAL FILTER OFF" xml:space="preserve">
+    <value>Filtro externo desactivado</value>
+  </data>
+  <data name="BAGS STATION - SHAKE BAG" xml:space="preserve">
+    <value>Estación de bolsas - Bolsa para agitar</value>
+  </data>
+  <data name="COMMAND BAG UP" xml:space="preserve">
+    <value>Bolsa de comando arriba</value>
+  </data>
+  <data name="(1=UP)" xml:space="preserve">
+    <value>(1=Arriba)</value>
+  </data>
+  <data name="BAG SAFETY BARRIER" xml:space="preserve">
+    <value>Barrera de seguridad para bolsas</value>
+  </data>
+  <data name="BAG SAFETY BARRIERS NOT OK" xml:space="preserve">
+    <value>Las barreras de seguridad de las bolsas no están bien</value>
+  </data>
+  <data name="BAG PRESENT" xml:space="preserve">
+    <value>Bolsa presente</value>
+  </data>
+  <data name="BAG NOT PRESENT" xml:space="preserve">
+    <value>Bolsa no presente</value>
+  </data>
+  <data name="MATERIAL DIRECTED HERE" xml:space="preserve">
+    <value>Material dirigido aquí</value>
+  </data>
+  <data name="MATERIAL IS DIRECTED TO THE OTHER BAG" xml:space="preserve">
+    <value>El material se dirige a la otra bolsa</value>
+  </data>
+  <data name="BAGS STATION - DIVERTER" xml:space="preserve">
+    <value>Estación de Bolsas - Desviadora</value>
+  </data>
+  <data name="BAGS STATION - BAG" xml:space="preserve">
+    <value>Estación de Bolsas - Bolsa</value>
+  </data>
+  <data name="BAG SHAKE REQUEST" xml:space="preserve">
+    <value>Solicitud de agitación de bolsa</value>
+  </data>
+  <data name="BAG PRESENT SENSOR" xml:space="preserve">
+    <value>Sensor de presencia de bolsa</value>
+  </data>
+  <data name="(1=PRESENT)" xml:space="preserve">
+    <value>(1=Presente)</value>
+  </data>
+  <data name="BAG GREEN RED" xml:space="preserve">
+    <value>Bolso Verde Rojo</value>
+  </data>
+  <data name="BAG GREEN LAMP" xml:space="preserve">
+    <value>Bolsa Lámpara Verde</value>
+  </data>
+  <data name="(1= OK FLSH=FILLING)" xml:space="preserve">
+    <value>(1= Ok Flsh=Relleno)</value>
+  </data>
+  <data name="BAG LAMP RED" xml:space="preserve">
+    <value>Lámpara de bolso roja</value>
+  </data>
+  <data name="BAG FULL" xml:space="preserve">
+    <value>Bolsa llena</value>
+  </data>
+  <data name="BAG NO MORE DETECTED" xml:space="preserve">
+    <value>Bolsa no más detectada</value>
+  </data>
+  <data name="BAG NOT FULL" xml:space="preserve">
+    <value>Bolsa no llena</value>
+  </data>
+  <data name="BAG FULL. REMOVE BAG" xml:space="preserve">
+    <value>Bolsa llena. Quitar bolsa</value>
+  </data>
+  <data name="BAG MAXIMUM LEVEL NOT OK" xml:space="preserve">
+    <value>Nivel máximo de bolsa no está bien</value>
+  </data>
+  <data name="NO BAG LIFT UP" xml:space="preserve">
+    <value>No se levanta la bolsa</value>
+  </data>
+  <data name="BAG LIFTING UP" xml:space="preserve">
+    <value>Levantamiento de bolsa</value>
+  </data>
+  <data name="SHAKING VALVE ENABLED" xml:space="preserve">
+    <value>Válvula de vibración habilitada</value>
+  </data>
+  <data name="SHAKING VALVE NOT ENABLED" xml:space="preserve">
+    <value>Válvula de vibración no habilitada</value>
+  </data>
+  <data name="BAGS STATION - BAGS " xml:space="preserve">
+    <value>Estación de Bolsas - Bolsas</value>
+  </data>
+  <data name="BAGS STATION - MANAGER" xml:space="preserve">
+    <value>Estación de Bolsas - Gerente</value>
+  </data>
+  <data name="SAFETY GREEN RED" xml:space="preserve">
+    <value>Seguridad Verde Rojo</value>
+  </data>
+  <data name="SAFETY GREEN LAMP" xml:space="preserve">
+    <value>Lámpara verde de seguridad</value>
+  </data>
+  <data name="(1= OK)" xml:space="preserve">
+    <value>(1= Está bien)</value>
+  </data>
+  <data name="SAFETY RED LAMP" xml:space="preserve">
+    <value>Lámpara roja de seguridad</value>
+  </data>
+  <data name="(SLOW =NOT OK FAST=ALARM)" xml:space="preserve">
+    <value>(Lento =No está bien Rápido=Alarma)</value>
+  </data>
+  <data name="SAFETY BARRIERS NOT OK TIMEOUT - BAGS CANNOT BE SHAKED" xml:space="preserve">
+    <value>Las barreras de seguridad no están bien Tiempo de espera: las bolsas no se pueden sacudir</value>
+  </data>
+  <data name="ENABLED FOR FILLING BAG" xml:space="preserve">
+    <value>Habilitado para llenado de bolsa</value>
+  </data>
+  <data name="FILLING NOT ENABLED - BAG" xml:space="preserve">
+    <value>Llenado no habilitado - Bolsa</value>
+  </data>
+  <data name="PRESENCE OF BAG" xml:space="preserve">
+    <value>Presencia de bolsa</value>
+  </data>
+  <data name="BAG NOT PRESENT - BAG" xml:space="preserve">
+    <value>Bolsa no presente - Bolsa</value>
+  </data>
+  <data name="AT LEAST ONE DEVICE IS NOT READY" xml:space="preserve">
+    <value>Al menos un dispositivo no está listo</value>
+  </data>
+  <data name="SHAKING TIME OK" xml:space="preserve">
+    <value>Tiempo de agitación ok</value>
+  </data>
+  <data name="SHAKING TIME IS SET TO ZERO" xml:space="preserve">
+    <value>El tiempo de agitación se establece en cero</value>
+  </data>
+  <data name="COMPACTION TIME OK" xml:space="preserve">
+    <value>Tiempo de compactación correcto</value>
+  </data>
+  <data name="COMPACTION TIME IS SET TO ZERO" xml:space="preserve">
+    <value>El tiempo de compactación se establece en cero</value>
+  </data>
+  <data name="COMPACTION NOT IN PROGRESS" xml:space="preserve">
+    <value>Compactación no en progreso</value>
+  </data>
+  <data name="BAG COMPACTION FOR MAXIMUM LEVEL" xml:space="preserve">
+    <value>Compactación de bolsas para nivel máximo</value>
+  </data>
+  <data name="NOT FULL BAG" xml:space="preserve">
+    <value>Bolsa no llena</value>
+  </data>
+  <data name="FILLING COMPLETED OF BAG" xml:space="preserve">
+    <value>Llenado completado de bolsa</value>
+  </data>
+  <data name="NOT FULL BAGS" xml:space="preserve">
+    <value>Bolsas no llenas</value>
+  </data>
+  <data name="FILLING COMPLETED OF BOTH BAGS" xml:space="preserve">
+    <value>Llenado completado de ambas bolsas</value>
+  </data>
+  <data name="BAGS PER HOUR" xml:space="preserve">
+    <value>Bolsas por hora</value>
+  </data>
+  <data name="ESTIMATED PRODUCTION" xml:space="preserve">
+    <value>Producción estimada</value>
+  </data>
+  <data name="SHAKING OF THE BAGS" xml:space="preserve">
+    <value>Sacudida de las bolsas</value>
+  </data>
+  <data name="ON TIME (BAG UP)" xml:space="preserve">
+    <value>A tiempo (embolsar)</value>
+  </data>
+  <data name="PAUSE TIME (BAG DOWN)" xml:space="preserve">
+    <value>Tiempo de pausa (bolsa bajada)</value>
+  </data>
+  <data name="BAG COMPACTION FOR MAXIMUM LEVEL REACHED" xml:space="preserve">
+    <value>Compactación de bolsas para alcanzar el nivel máximo</value>
+  </data>
+  <data name="MAXIMUM NUMBER OF COMPACTIONS (BAG FULL)" xml:space="preserve">
+    <value>Número máximo de compactaciones (bolsa llena)</value>
+  </data>
+  <data name="COMPACTIONS DONE FOR BAG" xml:space="preserve">
+    <value>Compactaciones hechas para bolsa</value>
+  </data>
+  <data name="STATISTICS" xml:space="preserve">
+    <value>Estadísticas</value>
+  </data>
+  <data name="AVERAGE BAG FILLING DURATION" xml:space="preserve">
+    <value>Duración promedio del llenado de bolsas</value>
+  </data>
+  <data name="PN COMMUNICATION OK" xml:space="preserve">
+    <value>Pn Comunicación Ok</value>
+  </data>
+  <data name="PROFINET COMMUNICATION NOT OK" xml:space="preserve">
+    <value>La comunicación Profinet no está bien</value>
+  </data>
+  <data name="E-STOP - PUSH-BUTTON RELAY STATUS" xml:space="preserve">
+    <value>Parada de emergencia: estado del relé del botón pulsador</value>
+  </data>
+  <data name="SYS - E-STOP - PUSH-BUTTON RELAY STATUS" xml:space="preserve">
+    <value>Sys - Parada de emergencia - Estado del relé del botón pulsador</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON COLLECTING SAFETY RELAY NOT OK" xml:space="preserve">
+    <value>Pulsador de parada que recoge el relé de seguridad no está bien</value>
+  </data>
+  <data name="SYSTEM CONTROL PLC" xml:space="preserve">
+    <value>PLC de control del sistema</value>
   </data>
 </root>
