--- a/Prevu.Localization/Properties/Resources.he.resx
+++ b/Prevu.Localization/Properties/Resources.he.resx
@@ -9303,4 +9303,334 @@
   <data name="M_INFO_FILLING_DISAB" xml:space="preserve">
     <value>אפשר מילוי לייצור דרך הגדרות HMI</value>
   </data>
+  <data name="M_INFO_EMPTYING_MODE" xml:space="preserve">
+    <value>מצב ריקון מופעל. שחזר את הגדרות ה-HMI לייצור ברגע שהריקון הסתיים</value>
+  </data>
+  <data name="STORAGE" xml:space="preserve">
+    <value>אִחסוּן</value>
+  </data>
+  <data name="BAG_PRODUCTION" xml:space="preserve">
+    <value>תיק_ייצור</value>
+  </data>
+  <data name="KG_PRODUCTION" xml:space="preserve">
+    <value>Kg_Production</value>
+  </data>
+  <data name="BAGS STATION - BAGS" xml:space="preserve">
+    <value>תחנת תיקים - תיקים</value>
+  </data>
+  <data name="DASHBOARD EDITOR" xml:space="preserve">
+    <value>עורך לוח המחוונים</value>
+  </data>
+  <data name="NO RECOVERY MODE" xml:space="preserve">
+    <value>אין מצב שחזור</value>
+  </data>
+  <data name="RECOVERY MODE FOR EMPTY HOPPER" xml:space="preserve">
+    <value>מצב שחזור עבור הופר ריק</value>
+  </data>
+  <data name="SAFETY BARRIERS NOT OK" xml:space="preserve">
+    <value>מחסומי בטיחות לא בסדר</value>
+  </data>
+  <data name="CONVEYOR LEFT LUBRICATION" xml:space="preserve">
+    <value>שימון מסוע שמאלי</value>
+  </data>
+  <data name="CONVEYOR RIGHT LUBRICATION" xml:space="preserve">
+    <value>שימון מסוע ימני</value>
+  </data>
+  <data name="DEBALER AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>Debaler Aux. יחידה הידראולית</value>
+  </data>
+  <data name="PREWASH WCE AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>Prewash Wce Aux. יחידה הידראולית</value>
+  </data>
+  <data name="NOT_BYPASSED" xml:space="preserve">
+    <value>לא_עוקף</value>
+  </data>
+  <data name="OFF LINE FEEDING" xml:space="preserve">
+    <value>הזנה לא מקוונת</value>
+  </data>
+  <data name="CABINET POWER SWITCH" xml:space="preserve">
+    <value>מתג הפעלה לארון</value>
+  </data>
+  <data name="CABINET POWER SWITCH NOT OK" xml:space="preserve">
+    <value>מתג הפעלה לארון לא בסדר</value>
+  </data>
+  <data name="GRINDER AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>מטחנה Aux. יחידה הידראולית</value>
+  </data>
+  <data name="SILO EMPTYING MODE ACTIVATED" xml:space="preserve">
+    <value>מצב ריקון סילו הופעל</value>
+  </data>
+  <data name="NO EMPTYING" xml:space="preserve">
+    <value>אין ריקון</value>
+  </data>
+  <data name="EMPTYING MODE SELECTED" xml:space="preserve">
+    <value>מצב ריקון נבחר</value>
+  </data>
+  <data name="SILO EMPTYING MODE - BYPASS OF MINIMUM LEVEL" xml:space="preserve">
+    <value>מצב ריקון סילו - עקיפת רמה מינימלית</value>
+  </data>
+  <data name="CHEMICAL CONCENTRATION SENSOR" xml:space="preserve">
+    <value>חיישן ריכוז כימי</value>
+  </data>
+  <data name="ANTIFOAM TO REACTOR 1" xml:space="preserve">
+    <value>נגד קצף לכור 1</value>
+  </data>
+  <data name="ANTIFOAM TO REACTOR 2" xml:space="preserve">
+    <value>נגד קצף לכור 2</value>
+  </data>
+  <data name="ANTIFOAM TO WASHING TANK" xml:space="preserve">
+    <value>אנטי קצף למיכל כביסה</value>
+  </data>
+  <data name="MAXIMUM NUMBER OF AUTO-PURGE RESTART" xml:space="preserve">
+    <value>המספר המרבי של הפעלה מחדש של טיהור אוטומטי</value>
+  </data>
+  <data name="NO PURGE" xml:space="preserve">
+    <value>אין טיהור</value>
+  </data>
+  <data name="STOP FOR AUTO-PURGE" xml:space="preserve">
+    <value>עצור לטיהור אוטומטי</value>
+  </data>
+  <data name="NO PADDLES STOPPING" xml:space="preserve">
+    <value>אין עצירת משוטים</value>
+  </data>
+  <data name="PADDLES STOPPING SPEED SELECTED" xml:space="preserve">
+    <value>מהירות עצירה של משוטים נבחרה</value>
+  </data>
+  <data name="FLOWRATE SENSOR OK" xml:space="preserve">
+    <value>חיישן קצב זרימה בסדר</value>
+  </data>
+  <data name="SENSOR NOT OK FOR MODULATION" xml:space="preserve">
+    <value>חיישן לא בסדר עבור אפנון</value>
+  </data>
+  <data name="WATER NOT AVAILABLE" xml:space="preserve">
+    <value>מים לא זמינים</value>
+  </data>
+  <data name="ACTUAL SETPOINT" xml:space="preserve">
+    <value>נקודת הגדר בפועל</value>
+  </data>
+  <data name="CONSTANT MODE COMMAND" xml:space="preserve">
+    <value>פקודת מצב קבוע</value>
+  </data>
+  <data name="MAINTENANCE COMMAND" xml:space="preserve">
+    <value>פיקוד תחזוקה</value>
+  </data>
+  <data name="MODULATION SETUP" xml:space="preserve">
+    <value>הגדרת אפנון</value>
+  </data>
+  <data name="NOT USED" xml:space="preserve">
+    <value>לא בשימוש</value>
+  </data>
+  <data name="ABOVE LOW LEVEL" xml:space="preserve">
+    <value>מעל רמה נמוכה</value>
+  </data>
+  <data name="SCREW STOPPED FOR MATERIAL BELOW LOW LEVEL" xml:space="preserve">
+    <value>בורג נעצר עבור חומר מתחת לרמה נמוכה</value>
+  </data>
+  <data name="AUTOMATIC FILTER" xml:space="preserve">
+    <value>מסנן אוטומטי</value>
+  </data>
+  <data name="(1=EXT AIR FILTER READY)" xml:space="preserve">
+    <value>(1=מסנן אוויר חיצוני מוכן)</value>
+  </data>
+  <data name="EXTERNAL FILTER OFF" xml:space="preserve">
+    <value>מסנן חיצוני כבוי</value>
+  </data>
+  <data name="BAGS STATION - SHAKE BAG" xml:space="preserve">
+    <value>Bags Station - שקית שייק</value>
+  </data>
+  <data name="COMMAND BAG UP" xml:space="preserve">
+    <value>Command Bag Up</value>
+  </data>
+  <data name="(1=UP)" xml:space="preserve">
+    <value>(1=למעלה)</value>
+  </data>
+  <data name="BAG SAFETY BARRIER" xml:space="preserve">
+    <value>מחסום בטיחות תיק</value>
+  </data>
+  <data name="BAG SAFETY BARRIERS NOT OK" xml:space="preserve">
+    <value>מחסומי בטיחות לתיק לא בסדר</value>
+  </data>
+  <data name="BAG PRESENT" xml:space="preserve">
+    <value>מתנת תיק</value>
+  </data>
+  <data name="BAG NOT PRESENT" xml:space="preserve">
+    <value>תיק לא קיים</value>
+  </data>
+  <data name="MATERIAL DIRECTED HERE" xml:space="preserve">
+    <value>חומר מכוון כאן</value>
+  </data>
+  <data name="MATERIAL IS DIRECTED TO THE OTHER BAG" xml:space="preserve">
+    <value>החומר מופנה לתיק השני</value>
+  </data>
+  <data name="BAGS STATION - DIVERTER" xml:space="preserve">
+    <value>תחנת תיקים - מפנה</value>
+  </data>
+  <data name="BAGS STATION - BAG" xml:space="preserve">
+    <value>תחנת תיקים - תיק</value>
+  </data>
+  <data name="BAG SHAKE REQUEST" xml:space="preserve">
+    <value>Bag Shake Request</value>
+  </data>
+  <data name="BAG PRESENT SENSOR" xml:space="preserve">
+    <value>חיישן מתנה לתיק</value>
+  </data>
+  <data name="(1=PRESENT)" xml:space="preserve">
+    <value>(1=הווה)</value>
+  </data>
+  <data name="BAG GREEN RED" xml:space="preserve">
+    <value>תיק ירוק אדום</value>
+  </data>
+  <data name="BAG GREEN LAMP" xml:space="preserve">
+    <value>תיק מנורה ירוקה</value>
+  </data>
+  <data name="(1= OK FLSH=FILLING)" xml:space="preserve">
+    <value>(1= אוקיי Flsh=מילוי)</value>
+  </data>
+  <data name="BAG LAMP RED" xml:space="preserve">
+    <value>מנורת תיקים אדומה</value>
+  </data>
+  <data name="BAG FULL" xml:space="preserve">
+    <value>תיק מלא</value>
+  </data>
+  <data name="BAG NO MORE DETECTED" xml:space="preserve">
+    <value>תיק לא זוהה יותר</value>
+  </data>
+  <data name="BAG NOT FULL" xml:space="preserve">
+    <value>תיק לא מלא</value>
+  </data>
+  <data name="BAG FULL. REMOVE BAG" xml:space="preserve">
+    <value>תיק מלא. הסר תיק</value>
+  </data>
+  <data name="BAG MAXIMUM LEVEL NOT OK" xml:space="preserve">
+    <value>רמה מקסימלית של תיק לא בסדר</value>
+  </data>
+  <data name="NO BAG LIFT UP" xml:space="preserve">
+    <value>ללא הרמת תיק</value>
+  </data>
+  <data name="BAG LIFTING UP" xml:space="preserve">
+    <value>הרמת תיק</value>
+  </data>
+  <data name="SHAKING VALVE ENABLED" xml:space="preserve">
+    <value>שסתום ניעור מופעל</value>
+  </data>
+  <data name="SHAKING VALVE NOT ENABLED" xml:space="preserve">
+    <value>שסתום ניעור לא מופעל</value>
+  </data>
+  <data name="BAGS STATION - BAGS " xml:space="preserve">
+    <value>תחנת תיקים - תיקים</value>
+  </data>
+  <data name="BAGS STATION - MANAGER" xml:space="preserve">
+    <value>תחנת תיקים - מנהל</value>
+  </data>
+  <data name="SAFETY GREEN RED" xml:space="preserve">
+    <value>בטיחות ירוק אדום</value>
+  </data>
+  <data name="SAFETY GREEN LAMP" xml:space="preserve">
+    <value>מנורה ירוקה בטיחותית</value>
+  </data>
+  <data name="(1= OK)" xml:space="preserve">
+    <value>(1= בסדר)</value>
+  </data>
+  <data name="SAFETY RED LAMP" xml:space="preserve">
+    <value>מנורה אדומה בטיחותית</value>
+  </data>
+  <data name="(SLOW =NOT OK FAST=ALARM)" xml:space="preserve">
+    <value>(לאט =לא בסדר מהיר=אזעקה)</value>
+  </data>
+  <data name="SAFETY BARRIERS NOT OK TIMEOUT - BAGS CANNOT BE SHAKED" xml:space="preserve">
+    <value>פסק זמן של מחסומי בטיחות לא בסדר - לא ניתן לנער תיקים</value>
+  </data>
+  <data name="ENABLED FOR FILLING BAG" xml:space="preserve">
+    <value>מופעל למילוי תיק</value>
+  </data>
+  <data name="FILLING NOT ENABLED - BAG" xml:space="preserve">
+    <value>מילוי לא מופעל - תיק</value>
+  </data>
+  <data name="PRESENCE OF BAG" xml:space="preserve">
+    <value>נוכחות של תיק</value>
+  </data>
+  <data name="BAG NOT PRESENT - BAG" xml:space="preserve">
+    <value>תיק לא נוכח - תיק</value>
+  </data>
+  <data name="AT LEAST ONE DEVICE IS NOT READY" xml:space="preserve">
+    <value>לפחות מכשיר אחד לא מוכן</value>
+  </data>
+  <data name="SHAKING TIME OK" xml:space="preserve">
+    <value>Shaking Time אוקי</value>
+  </data>
+  <data name="SHAKING TIME IS SET TO ZERO" xml:space="preserve">
+    <value>זמן ניעור מוגדר לאפס</value>
+  </data>
+  <data name="COMPACTION TIME OK" xml:space="preserve">
+    <value>זמן דחיסה בסדר</value>
+  </data>
+  <data name="COMPACTION TIME IS SET TO ZERO" xml:space="preserve">
+    <value>זמן הדחיסה מוגדר לאפס</value>
+  </data>
+  <data name="COMPACTION NOT IN PROGRESS" xml:space="preserve">
+    <value>דחיסה לא בעיצומה</value>
+  </data>
+  <data name="BAG COMPACTION FOR MAXIMUM LEVEL" xml:space="preserve">
+    <value>דחיסה של תיק לרמה מקסימלית</value>
+  </data>
+  <data name="NOT FULL BAG" xml:space="preserve">
+    <value>לא תיק מלא</value>
+  </data>
+  <data name="FILLING COMPLETED OF BAG" xml:space="preserve">
+    <value>מילוי הושלם של שקית</value>
+  </data>
+  <data name="NOT FULL BAGS" xml:space="preserve">
+    <value>לא תיקים מלאים</value>
+  </data>
+  <data name="FILLING COMPLETED OF BOTH BAGS" xml:space="preserve">
+    <value>המילוי הושלם של שתי השקיות</value>
+  </data>
+  <data name="BAGS PER HOUR" xml:space="preserve">
+    <value>שקיות לשעה</value>
+  </data>
+  <data name="ESTIMATED PRODUCTION" xml:space="preserve">
+    <value>ייצור משוער</value>
+  </data>
+  <data name="SHAKING OF THE BAGS" xml:space="preserve">
+    <value>ניעור התיקים</value>
+  </data>
+  <data name="ON TIME (BAG UP)" xml:space="preserve">
+    <value>בזמן (Bag Up)</value>
+  </data>
+  <data name="PAUSE TIME (BAG DOWN)" xml:space="preserve">
+    <value>זמן השהייה (Bag Down)</value>
+  </data>
+  <data name="BAG COMPACTION FOR MAXIMUM LEVEL REACHED" xml:space="preserve">
+    <value>דחיסה של תיק להשגת רמה מקסימלית</value>
+  </data>
+  <data name="MAXIMUM NUMBER OF COMPACTIONS (BAG FULL)" xml:space="preserve">
+    <value>מספר מקסימלי של דחיסות (תיק מלא)</value>
+  </data>
+  <data name="COMPACTIONS DONE FOR BAG" xml:space="preserve">
+    <value>דחיסות שנעשו עבור תיק</value>
+  </data>
+  <data name="STATISTICS" xml:space="preserve">
+    <value>סטָטִיסטִיקָה</value>
+  </data>
+  <data name="AVERAGE BAG FILLING DURATION" xml:space="preserve">
+    <value>משך מילוי שקית ממוצע</value>
+  </data>
+  <data name="PN COMMUNICATION OK" xml:space="preserve">
+    <value>Pn תקשורת אוקי</value>
+  </data>
+  <data name="PROFINET COMMUNICATION NOT OK" xml:space="preserve">
+    <value>תקשורת Profinet לא בסדר</value>
+  </data>
+  <data name="E-STOP - PUSH-BUTTON RELAY STATUS" xml:space="preserve">
+    <value>E-Stop - מצב ממסר בלחיצת כפתור</value>
+  </data>
+  <data name="SYS - E-STOP - PUSH-BUTTON RELAY STATUS" xml:space="preserve">
+    <value>Sys - E-Stop - מצב ממסר בלחיצת כפתור</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON COLLECTING SAFETY RELAY NOT OK" xml:space="preserve">
+    <value>ממסר בטיחות לאיסוף לחצן איסוף לא תקין</value>
+  </data>
+  <data name="SYSTEM CONTROL PLC" xml:space="preserve">
+    <value>System Control Plc</value>
+  </data>
 </root>
