--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -6205,7 +6205,7 @@
     <value>Caricamento</value>
   </data>
   <data name="HOT WASH" xml:space="preserve">
-    <value>Lav. caldo</value>
+    <value>Lav. Caldo</value>
   </data>
   <data name="RINSING" xml:space="preserve">
     <value>Risciacquo</value>
@@ -9302,5 +9302,335 @@
   </data>
   <data name="M_INFO_FILLING_DISAB" xml:space="preserve">
     <value>Abilita il riempimento per la produzione tramite le impostazioni HMI</value>
+  </data>
+  <data name="M_INFO_EMPTYING_MODE" xml:space="preserve">
+    <value>La modalità di svuotamento è attivata. Ripristinare le impostazioni HMI per la produzione non appena viene terminato lo svuotamento</value>
+  </data>
+  <data name="STORAGE" xml:space="preserve">
+    <value>Magazzinaggio</value>
+  </data>
+  <data name="BAG_PRODUCTION" xml:space="preserve">
+    <value>Borsa_Produzione</value>
+  </data>
+  <data name="KG_PRODUCTION" xml:space="preserve">
+    <value>Kg_Produzione</value>
+  </data>
+  <data name="BAGS STATION - BAGS" xml:space="preserve">
+    <value>Stazione Borse - Borse</value>
+  </data>
+  <data name="DASHBOARD EDITOR" xml:space="preserve">
+    <value>Editor del dashboard</value>
+  </data>
+  <data name="NO RECOVERY MODE" xml:space="preserve">
+    <value>Nessuna modalità di ripristino</value>
+  </data>
+  <data name="RECOVERY MODE FOR EMPTY HOPPER" xml:space="preserve">
+    <value>Modalità di recupero per tramoggia vuota</value>
+  </data>
+  <data name="SAFETY BARRIERS NOT OK" xml:space="preserve">
+    <value>Barriere di sicurezza non ok</value>
+  </data>
+  <data name="CONVEYOR LEFT LUBRICATION" xml:space="preserve">
+    <value>Lubrificazione sinistra del trasportatore</value>
+  </data>
+  <data name="CONVEYOR RIGHT LUBRICATION" xml:space="preserve">
+    <value>Lubrificazione corretta del trasportatore</value>
+  </data>
+  <data name="DEBALER AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>Debaler Aus. Unità idraulica</value>
+  </data>
+  <data name="PREWASH WCE AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>Prelavaggio Acqua Aux. Unità idraulica</value>
+  </data>
+  <data name="NOT_BYPASSED" xml:space="preserve">
+    <value>Non_Bypassato</value>
+  </data>
+  <data name="OFF LINE FEEDING" xml:space="preserve">
+    <value>Alimentazione fuori linea</value>
+  </data>
+  <data name="CABINET POWER SWITCH" xml:space="preserve">
+    <value>Interruttore di alimentazione dell'armadio</value>
+  </data>
+  <data name="CABINET POWER SWITCH NOT OK" xml:space="preserve">
+    <value>L'interruttore di alimentazione dell'armadio non è ok</value>
+  </data>
+  <data name="GRINDER AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>Macinino ausiliario. Unità idraulica</value>
+  </data>
+  <data name="SILO EMPTYING MODE ACTIVATED" xml:space="preserve">
+    <value>Modalità svuotamento silo attivata</value>
+  </data>
+  <data name="NO EMPTYING" xml:space="preserve">
+    <value>Nessun svuotamento</value>
+  </data>
+  <data name="EMPTYING MODE SELECTED" xml:space="preserve">
+    <value>Modalità di svuotamento selezionata</value>
+  </data>
+  <data name="SILO EMPTYING MODE - BYPASS OF MINIMUM LEVEL" xml:space="preserve">
+    <value>Modalità Svuotamento Silo - Bypass Del Livello Minimo</value>
+  </data>
+  <data name="CHEMICAL CONCENTRATION SENSOR" xml:space="preserve">
+    <value>Sensore di concentrazione chimica</value>
+  </data>
+  <data name="ANTIFOAM TO REACTOR 1" xml:space="preserve">
+    <value>Antischiuma al reattore 1</value>
+  </data>
+  <data name="ANTIFOAM TO REACTOR 2" xml:space="preserve">
+    <value>Antischiuma al reattore 2</value>
+  </data>
+  <data name="ANTIFOAM TO WASHING TANK" xml:space="preserve">
+    <value>Antischiuma per vasca di lavaggio</value>
+  </data>
+  <data name="MAXIMUM NUMBER OF AUTO-PURGE RESTART" xml:space="preserve">
+    <value>Numero massimo di riavvii di eliminazione automatica</value>
+  </data>
+  <data name="NO PURGE" xml:space="preserve">
+    <value>Nessuna epurazione</value>
+  </data>
+  <data name="STOP FOR AUTO-PURGE" xml:space="preserve">
+    <value>Interrompi per spurgo automatico</value>
+  </data>
+  <data name="NO PADDLES STOPPING" xml:space="preserve">
+    <value>Nessuna pagaia che si ferma</value>
+  </data>
+  <data name="PADDLES STOPPING SPEED SELECTED" xml:space="preserve">
+    <value>Velocità di arresto delle palette selezionata</value>
+  </data>
+  <data name="FLOWRATE SENSOR OK" xml:space="preserve">
+    <value>Sensore di portata ok</value>
+  </data>
+  <data name="SENSOR NOT OK FOR MODULATION" xml:space="preserve">
+    <value>Sensore non idoneo alla modulazione</value>
+  </data>
+  <data name="WATER NOT AVAILABLE" xml:space="preserve">
+    <value>Acqua non disponibile</value>
+  </data>
+  <data name="ACTUAL SETPOINT" xml:space="preserve">
+    <value>Setpoint effettivo</value>
+  </data>
+  <data name="CONSTANT MODE COMMAND" xml:space="preserve">
+    <value>Comando modalità costante</value>
+  </data>
+  <data name="MAINTENANCE COMMAND" xml:space="preserve">
+    <value>Comando di manutenzione</value>
+  </data>
+  <data name="MODULATION SETUP" xml:space="preserve">
+    <value>Impostazione della modulazione</value>
+  </data>
+  <data name="NOT USED" xml:space="preserve">
+    <value>Non usato</value>
+  </data>
+  <data name="ABOVE LOW LEVEL" xml:space="preserve">
+    <value>Sopra il livello basso</value>
+  </data>
+  <data name="SCREW STOPPED FOR MATERIAL BELOW LOW LEVEL" xml:space="preserve">
+    <value>Vite fermata per materiale al di sotto del livello basso</value>
+  </data>
+  <data name="AUTOMATIC FILTER" xml:space="preserve">
+    <value>Filtro automatico</value>
+  </data>
+  <data name="(1=EXT AIR FILTER READY)" xml:space="preserve">
+    <value>(1=Filtro dell'aria esterno pronto)</value>
+  </data>
+  <data name="EXTERNAL FILTER OFF" xml:space="preserve">
+    <value>Filtro esterno disattivato</value>
+  </data>
+  <data name="BAGS STATION - SHAKE BAG" xml:space="preserve">
+    <value>Stazione Borse - Shake Bag</value>
+  </data>
+  <data name="COMMAND BAG UP" xml:space="preserve">
+    <value>Comando Bag Up</value>
+  </data>
+  <data name="(1=UP)" xml:space="preserve">
+    <value>(1=Su)</value>
+  </data>
+  <data name="BAG SAFETY BARRIER" xml:space="preserve">
+    <value>Barriera di sicurezza per borse</value>
+  </data>
+  <data name="BAG SAFETY BARRIERS NOT OK" xml:space="preserve">
+    <value>Barriere di sicurezza della borsa non ok</value>
+  </data>
+  <data name="BAG PRESENT" xml:space="preserve">
+    <value>Borsa presente</value>
+  </data>
+  <data name="BAG NOT PRESENT" xml:space="preserve">
+    <value>Borsa non presente</value>
+  </data>
+  <data name="MATERIAL DIRECTED HERE" xml:space="preserve">
+    <value>Materiale diretto qui</value>
+  </data>
+  <data name="MATERIAL IS DIRECTED TO THE OTHER BAG" xml:space="preserve">
+    <value>Il materiale è diretto all'altra borsa</value>
+  </data>
+  <data name="BAGS STATION - DIVERTER" xml:space="preserve">
+    <value>Stazione Borse - Deviatore</value>
+  </data>
+  <data name="BAGS STATION - BAG" xml:space="preserve">
+    <value>Stazione Borse - Borsa</value>
+  </data>
+  <data name="BAG SHAKE REQUEST" xml:space="preserve">
+    <value>Richiesta di agitazione della borsa</value>
+  </data>
+  <data name="BAG PRESENT SENSOR" xml:space="preserve">
+    <value>Sensore presenza sacchetto</value>
+  </data>
+  <data name="(1=PRESENT)" xml:space="preserve">
+    <value>(1=Presente)</value>
+  </data>
+  <data name="BAG GREEN RED" xml:space="preserve">
+    <value>Borsa Verde Rossa</value>
+  </data>
+  <data name="BAG GREEN LAMP" xml:space="preserve">
+    <value>Borsa Lampada Verde</value>
+  </data>
+  <data name="(1= OK FLSH=FILLING)" xml:space="preserve">
+    <value>(1=Ok Flsh=Riempimento)</value>
+  </data>
+  <data name="BAG LAMP RED" xml:space="preserve">
+    <value>Lampada da borsa rossa</value>
+  </data>
+  <data name="BAG FULL" xml:space="preserve">
+    <value>Borsa piena</value>
+  </data>
+  <data name="BAG NO MORE DETECTED" xml:space="preserve">
+    <value>Nessuna borsa più rilevata</value>
+  </data>
+  <data name="BAG NOT FULL" xml:space="preserve">
+    <value>Borsa non piena</value>
+  </data>
+  <data name="BAG FULL. REMOVE BAG" xml:space="preserve">
+    <value>Borsa piena. Rimuovere la borsa</value>
+  </data>
+  <data name="BAG MAXIMUM LEVEL NOT OK" xml:space="preserve">
+    <value>Livello massimo borsa non ok</value>
+  </data>
+  <data name="NO BAG LIFT UP" xml:space="preserve">
+    <value>Nessun sollevamento della borsa</value>
+  </data>
+  <data name="BAG LIFTING UP" xml:space="preserve">
+    <value>Sollevamento della borsa</value>
+  </data>
+  <data name="SHAKING VALVE ENABLED" xml:space="preserve">
+    <value>Valvola di scuotimento abilitata</value>
+  </data>
+  <data name="SHAKING VALVE NOT ENABLED" xml:space="preserve">
+    <value>Valvola di scuotimento non abilitata</value>
+  </data>
+  <data name="BAGS STATION - BAGS " xml:space="preserve">
+    <value>Stazione Borse - Borse</value>
+  </data>
+  <data name="BAGS STATION - MANAGER" xml:space="preserve">
+    <value>Stazione Borse - Responsabile</value>
+  </data>
+  <data name="SAFETY GREEN RED" xml:space="preserve">
+    <value>Sicurezza Verde Rosso</value>
+  </data>
+  <data name="SAFETY GREEN LAMP" xml:space="preserve">
+    <value>Lampada verde di sicurezza</value>
+  </data>
+  <data name="(1= OK)" xml:space="preserve">
+    <value>(1=Ok)</value>
+  </data>
+  <data name="SAFETY RED LAMP" xml:space="preserve">
+    <value>Lampada rossa di sicurezza</value>
+  </data>
+  <data name="(SLOW =NOT OK FAST=ALARM)" xml:space="preserve">
+    <value>(Lento=Non OK Veloce=Allarme)</value>
+  </data>
+  <data name="SAFETY BARRIERS NOT OK TIMEOUT - BAGS CANNOT BE SHAKED" xml:space="preserve">
+    <value>Barriere di sicurezza non ok Timeout: le borse non possono essere scosse</value>
+  </data>
+  <data name="ENABLED FOR FILLING BAG" xml:space="preserve">
+    <value>Abilitato per il riempimento del sacco</value>
+  </data>
+  <data name="FILLING NOT ENABLED - BAG" xml:space="preserve">
+    <value>Riempimento non abilitato - Sacco</value>
+  </data>
+  <data name="PRESENCE OF BAG" xml:space="preserve">
+    <value>Presenza Di Borsa</value>
+  </data>
+  <data name="BAG NOT PRESENT - BAG" xml:space="preserve">
+    <value>Borsa non presente - Borsa</value>
+  </data>
+  <data name="AT LEAST ONE DEVICE IS NOT READY" xml:space="preserve">
+    <value>Almeno un dispositivo non è pronto</value>
+  </data>
+  <data name="SHAKING TIME OK" xml:space="preserve">
+    <value>Tempo di agitazione Ok</value>
+  </data>
+  <data name="SHAKING TIME IS SET TO ZERO" xml:space="preserve">
+    <value>Il tempo di agitazione è impostato su zero</value>
+  </data>
+  <data name="COMPACTION TIME OK" xml:space="preserve">
+    <value>Tempo di compattazione ok</value>
+  </data>
+  <data name="COMPACTION TIME IS SET TO ZERO" xml:space="preserve">
+    <value>Il tempo di compattazione è impostato su zero</value>
+  </data>
+  <data name="COMPACTION NOT IN PROGRESS" xml:space="preserve">
+    <value>Compattazione non in corso</value>
+  </data>
+  <data name="BAG COMPACTION FOR MAXIMUM LEVEL" xml:space="preserve">
+    <value>Compattazione del sacco per il massimo livello</value>
+  </data>
+  <data name="NOT FULL BAG" xml:space="preserve">
+    <value>Borsa non piena</value>
+  </data>
+  <data name="FILLING COMPLETED OF BAG" xml:space="preserve">
+    <value>Riempimento completato del sacchetto</value>
+  </data>
+  <data name="NOT FULL BAGS" xml:space="preserve">
+    <value>Borse non piene</value>
+  </data>
+  <data name="FILLING COMPLETED OF BOTH BAGS" xml:space="preserve">
+    <value>Riempimento completato di entrambe le borse</value>
+  </data>
+  <data name="BAGS PER HOUR" xml:space="preserve">
+    <value>Borse all'ora</value>
+  </data>
+  <data name="ESTIMATED PRODUCTION" xml:space="preserve">
+    <value>Produzione stimata</value>
+  </data>
+  <data name="SHAKING OF THE BAGS" xml:space="preserve">
+    <value>Scuotimento delle borse</value>
+  </data>
+  <data name="ON TIME (BAG UP)" xml:space="preserve">
+    <value>In orario (bagaglio)</value>
+  </data>
+  <data name="PAUSE TIME (BAG DOWN)" xml:space="preserve">
+    <value>Tempo di pausa (Bag giù)</value>
+  </data>
+  <data name="BAG COMPACTION FOR MAXIMUM LEVEL REACHED" xml:space="preserve">
+    <value>Compattazione del sacco per il massimo livello raggiunto</value>
+  </data>
+  <data name="MAXIMUM NUMBER OF COMPACTIONS (BAG FULL)" xml:space="preserve">
+    <value>Numero massimo di compattazioni (sacco pieno)</value>
+  </data>
+  <data name="COMPACTIONS DONE FOR BAG" xml:space="preserve">
+    <value>Compattazioni fatte per la borsa</value>
+  </data>
+  <data name="STATISTICS" xml:space="preserve">
+    <value>Statistiche</value>
+  </data>
+  <data name="AVERAGE BAG FILLING DURATION" xml:space="preserve">
+    <value>Durata media del riempimento del sacco</value>
+  </data>
+  <data name="PN COMMUNICATION OK" xml:space="preserve">
+    <value>Pn Comunicazione Ok</value>
+  </data>
+  <data name="PROFINET COMMUNICATION NOT OK" xml:space="preserve">
+    <value>Comunicazione Profinet non ok</value>
+  </data>
+  <data name="E-STOP - PUSH-BUTTON RELAY STATUS" xml:space="preserve">
+    <value>E-Stop - Stato relè pulsante</value>
+  </data>
+  <data name="SYS - E-STOP - PUSH-BUTTON RELAY STATUS" xml:space="preserve">
+    <value>Sys - E-Stop - Stato relè pulsante</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON COLLECTING SAFETY RELAY NOT OK" xml:space="preserve">
+    <value>Relè di sicurezza di raccolta pulsante Estop non ok</value>
+  </data>
+  <data name="SYSTEM CONTROL PLC" xml:space="preserve">
+    <value>Plc di controllo del sistema</value>
   </data>
 </root>
