--- a/Prevu.Localization/Properties/Resources.pt.resx
+++ b/Prevu.Localization/Properties/Resources.pt.resx
@@ -9303,4 +9303,334 @@
   <data name="M_INFO_FILLING_DISAB" xml:space="preserve">
     <value>Habilitar preenchimento para produção por meio de configurações de IHM</value>
   </data>
+  <data name="M_INFO_EMPTYING_MODE" xml:space="preserve">
+    <value>O modo de esvaziamento está ativado. Restaure as configurações da IHM para produção assim que o esvaziamento for concluído</value>
+  </data>
+  <data name="STORAGE" xml:space="preserve">
+    <value>Armazenar</value>
+  </data>
+  <data name="BAG_PRODUCTION" xml:space="preserve">
+    <value>Saco_Produção</value>
+  </data>
+  <data name="KG_PRODUCTION" xml:space="preserve">
+    <value>Kg_Produção</value>
+  </data>
+  <data name="BAGS STATION - BAGS" xml:space="preserve">
+    <value>Estação de Sacos - Sacos</value>
+  </data>
+  <data name="DASHBOARD EDITOR" xml:space="preserve">
+    <value>Editor de painel</value>
+  </data>
+  <data name="NO RECOVERY MODE" xml:space="preserve">
+    <value>Sem modo de recuperação</value>
+  </data>
+  <data name="RECOVERY MODE FOR EMPTY HOPPER" xml:space="preserve">
+    <value>Modo de recuperação para funil vazio</value>
+  </data>
+  <data name="SAFETY BARRIERS NOT OK" xml:space="preserve">
+    <value>Barreiras de segurança não estão corretas</value>
+  </data>
+  <data name="CONVEYOR LEFT LUBRICATION" xml:space="preserve">
+    <value>Lubrificação esquerda do transportador</value>
+  </data>
+  <data name="CONVEYOR RIGHT LUBRICATION" xml:space="preserve">
+    <value>Lubrificação correta do transportador</value>
+  </data>
+  <data name="DEBALER AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>Debaler Aux. Unidade hidráulica</value>
+  </data>
+  <data name="PREWASH WCE AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>Pré-lavagem Wce Aux. Unidade hidráulica</value>
+  </data>
+  <data name="NOT_BYPASSED" xml:space="preserve">
+    <value>Não_Bypassado</value>
+  </data>
+  <data name="OFF LINE FEEDING" xml:space="preserve">
+    <value>Alimentação off-line</value>
+  </data>
+  <data name="CABINET POWER SWITCH" xml:space="preserve">
+    <value>Interruptor de alimentação do gabinete</value>
+  </data>
+  <data name="CABINET POWER SWITCH NOT OK" xml:space="preserve">
+    <value>Interruptor de alimentação do gabinete não está ok</value>
+  </data>
+  <data name="GRINDER AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>Moedor auxiliar. Unidade hidráulica</value>
+  </data>
+  <data name="SILO EMPTYING MODE ACTIVATED" xml:space="preserve">
+    <value>Modo de esvaziamento de silo ativado</value>
+  </data>
+  <data name="NO EMPTYING" xml:space="preserve">
+    <value>Sem esvaziamento</value>
+  </data>
+  <data name="EMPTYING MODE SELECTED" xml:space="preserve">
+    <value>Modo de esvaziamento selecionado</value>
+  </data>
+  <data name="SILO EMPTYING MODE - BYPASS OF MINIMUM LEVEL" xml:space="preserve">
+    <value>Modo de Esvaziamento do Silo - Bypass do Nível Mínimo</value>
+  </data>
+  <data name="CHEMICAL CONCENTRATION SENSOR" xml:space="preserve">
+    <value>Sensor de concentração química</value>
+  </data>
+  <data name="ANTIFOAM TO REACTOR 1" xml:space="preserve">
+    <value>Antiespumante para Reator 1</value>
+  </data>
+  <data name="ANTIFOAM TO REACTOR 2" xml:space="preserve">
+    <value>Antiespumante para Reator 2</value>
+  </data>
+  <data name="ANTIFOAM TO WASHING TANK" xml:space="preserve">
+    <value>Antiespumante para tanque de lavagem</value>
+  </data>
+  <data name="MAXIMUM NUMBER OF AUTO-PURGE RESTART" xml:space="preserve">
+    <value>Número máximo de reinicialização de purga automática</value>
+  </data>
+  <data name="NO PURGE" xml:space="preserve">
+    <value>Sem purga</value>
+  </data>
+  <data name="STOP FOR AUTO-PURGE" xml:space="preserve">
+    <value>Pare para purga automática</value>
+  </data>
+  <data name="NO PADDLES STOPPING" xml:space="preserve">
+    <value>Sem parada de remos</value>
+  </data>
+  <data name="PADDLES STOPPING SPEED SELECTED" xml:space="preserve">
+    <value>Velocidade de parada das pás selecionada</value>
+  </data>
+  <data name="FLOWRATE SENSOR OK" xml:space="preserve">
+    <value>Sensor de vazão ok</value>
+  </data>
+  <data name="SENSOR NOT OK FOR MODULATION" xml:space="preserve">
+    <value>Sensor não está ok para modulação</value>
+  </data>
+  <data name="WATER NOT AVAILABLE" xml:space="preserve">
+    <value>Água não disponível</value>
+  </data>
+  <data name="ACTUAL SETPOINT" xml:space="preserve">
+    <value>Ponto de ajuste real</value>
+  </data>
+  <data name="CONSTANT MODE COMMAND" xml:space="preserve">
+    <value>Comando de modo constante</value>
+  </data>
+  <data name="MAINTENANCE COMMAND" xml:space="preserve">
+    <value>Comando de Manutenção</value>
+  </data>
+  <data name="MODULATION SETUP" xml:space="preserve">
+    <value>Configuração de modulação</value>
+  </data>
+  <data name="NOT USED" xml:space="preserve">
+    <value>Não usado</value>
+  </data>
+  <data name="ABOVE LOW LEVEL" xml:space="preserve">
+    <value>Acima do nível baixo</value>
+  </data>
+  <data name="SCREW STOPPED FOR MATERIAL BELOW LOW LEVEL" xml:space="preserve">
+    <value>Parafuso parado para material abaixo do nível baixo</value>
+  </data>
+  <data name="AUTOMATIC FILTER" xml:space="preserve">
+    <value>Filtro Automático</value>
+  </data>
+  <data name="(1=EXT AIR FILTER READY)" xml:space="preserve">
+    <value>(1=Filtro de ar externo pronto)</value>
+  </data>
+  <data name="EXTERNAL FILTER OFF" xml:space="preserve">
+    <value>Filtro externo desligado</value>
+  </data>
+  <data name="BAGS STATION - SHAKE BAG" xml:space="preserve">
+    <value>Estação de Sacos - Shake Bag</value>
+  </data>
+  <data name="COMMAND BAG UP" xml:space="preserve">
+    <value>Comando Bag Up</value>
+  </data>
+  <data name="(1=UP)" xml:space="preserve">
+    <value>(1=acima)</value>
+  </data>
+  <data name="BAG SAFETY BARRIER" xml:space="preserve">
+    <value>Barreira de segurança para bolsas</value>
+  </data>
+  <data name="BAG SAFETY BARRIERS NOT OK" xml:space="preserve">
+    <value>Barreiras de segurança da bolsa não estão corretas</value>
+  </data>
+  <data name="BAG PRESENT" xml:space="preserve">
+    <value>Presente de bolsa</value>
+  </data>
+  <data name="BAG NOT PRESENT" xml:space="preserve">
+    <value>Bolsa não presente</value>
+  </data>
+  <data name="MATERIAL DIRECTED HERE" xml:space="preserve">
+    <value>Material direcionado aqui</value>
+  </data>
+  <data name="MATERIAL IS DIRECTED TO THE OTHER BAG" xml:space="preserve">
+    <value>O material é direcionado para a outra sacola</value>
+  </data>
+  <data name="BAGS STATION - DIVERTER" xml:space="preserve">
+    <value>Estação de Sacos - Desviador</value>
+  </data>
+  <data name="BAGS STATION - BAG" xml:space="preserve">
+    <value>Estação de Sacos - Saco</value>
+  </data>
+  <data name="BAG SHAKE REQUEST" xml:space="preserve">
+    <value>Solicitação de agitação de bolsa</value>
+  </data>
+  <data name="BAG PRESENT SENSOR" xml:space="preserve">
+    <value>Sensor de presença de bolsa</value>
+  </data>
+  <data name="(1=PRESENT)" xml:space="preserve">
+    <value>(1=Presente)</value>
+  </data>
+  <data name="BAG GREEN RED" xml:space="preserve">
+    <value>Saco Verde Vermelho</value>
+  </data>
+  <data name="BAG GREEN LAMP" xml:space="preserve">
+    <value>Saco Verde Lâmpada</value>
+  </data>
+  <data name="(1= OK FLSH=FILLING)" xml:space="preserve">
+    <value>(1= Ok Flsh=Preenchimento)</value>
+  </data>
+  <data name="BAG LAMP RED" xml:space="preserve">
+    <value>Bolsa Lâmpada Vermelha</value>
+  </data>
+  <data name="BAG FULL" xml:space="preserve">
+    <value>Saco cheio</value>
+  </data>
+  <data name="BAG NO MORE DETECTED" xml:space="preserve">
+    <value>Saco nunca mais detectado</value>
+  </data>
+  <data name="BAG NOT FULL" xml:space="preserve">
+    <value>Saco não cheio</value>
+  </data>
+  <data name="BAG FULL. REMOVE BAG" xml:space="preserve">
+    <value>Saco cheio. Remover bolsa</value>
+  </data>
+  <data name="BAG MAXIMUM LEVEL NOT OK" xml:space="preserve">
+    <value>Nível máximo da bolsa não está ok</value>
+  </data>
+  <data name="NO BAG LIFT UP" xml:space="preserve">
+    <value>Sem levantamento de bolsa</value>
+  </data>
+  <data name="BAG LIFTING UP" xml:space="preserve">
+    <value>Saco levantando</value>
+  </data>
+  <data name="SHAKING VALVE ENABLED" xml:space="preserve">
+    <value>Válvula de agitação habilitada</value>
+  </data>
+  <data name="SHAKING VALVE NOT ENABLED" xml:space="preserve">
+    <value>Válvula de agitação não habilitada</value>
+  </data>
+  <data name="BAGS STATION - BAGS " xml:space="preserve">
+    <value>Estação de Sacos - Sacos</value>
+  </data>
+  <data name="BAGS STATION - MANAGER" xml:space="preserve">
+    <value>Estação de Sacos - Gerente</value>
+  </data>
+  <data name="SAFETY GREEN RED" xml:space="preserve">
+    <value>Segurança Verde Vermelho</value>
+  </data>
+  <data name="SAFETY GREEN LAMP" xml:space="preserve">
+    <value>Lâmpada Verde de Segurança</value>
+  </data>
+  <data name="(1= OK)" xml:space="preserve">
+    <value>(1 = OK)</value>
+  </data>
+  <data name="SAFETY RED LAMP" xml:space="preserve">
+    <value>Lâmpada vermelha de segurança</value>
+  </data>
+  <data name="(SLOW =NOT OK FAST=ALARM)" xml:space="preserve">
+    <value>(Lento =Não está bem Rápido=Alarme)</value>
+  </data>
+  <data name="SAFETY BARRIERS NOT OK TIMEOUT - BAGS CANNOT BE SHAKED" xml:space="preserve">
+    <value>Barreiras de segurança não estão ok, tempo limite - as sacolas não podem ser agitadas</value>
+  </data>
+  <data name="ENABLED FOR FILLING BAG" xml:space="preserve">
+    <value>Habilitado para encher saco</value>
+  </data>
+  <data name="FILLING NOT ENABLED - BAG" xml:space="preserve">
+    <value>Enchimento não habilitado - Saco</value>
+  </data>
+  <data name="PRESENCE OF BAG" xml:space="preserve">
+    <value>Presença de bolsa</value>
+  </data>
+  <data name="BAG NOT PRESENT - BAG" xml:space="preserve">
+    <value>Saco não presente - Saco</value>
+  </data>
+  <data name="AT LEAST ONE DEVICE IS NOT READY" xml:space="preserve">
+    <value>Pelo menos um dispositivo não está pronto</value>
+  </data>
+  <data name="SHAKING TIME OK" xml:space="preserve">
+    <value>Tempo de agitação ok</value>
+  </data>
+  <data name="SHAKING TIME IS SET TO ZERO" xml:space="preserve">
+    <value>O tempo de agitação está definido como zero</value>
+  </data>
+  <data name="COMPACTION TIME OK" xml:space="preserve">
+    <value>Tempo de compactação ok</value>
+  </data>
+  <data name="COMPACTION TIME IS SET TO ZERO" xml:space="preserve">
+    <value>O tempo de compactação está definido como zero</value>
+  </data>
+  <data name="COMPACTION NOT IN PROGRESS" xml:space="preserve">
+    <value>Compactação não em andamento</value>
+  </data>
+  <data name="BAG COMPACTION FOR MAXIMUM LEVEL" xml:space="preserve">
+    <value>Compactação de saco para nível máximo</value>
+  </data>
+  <data name="NOT FULL BAG" xml:space="preserve">
+    <value>Saco não cheio</value>
+  </data>
+  <data name="FILLING COMPLETED OF BAG" xml:space="preserve">
+    <value>Enchimento concluído do saco</value>
+  </data>
+  <data name="NOT FULL BAGS" xml:space="preserve">
+    <value>Sacos não cheios</value>
+  </data>
+  <data name="FILLING COMPLETED OF BOTH BAGS" xml:space="preserve">
+    <value>Enchimento concluído de ambos os sacos</value>
+  </data>
+  <data name="BAGS PER HOUR" xml:space="preserve">
+    <value>Sacos por hora</value>
+  </data>
+  <data name="ESTIMATED PRODUCTION" xml:space="preserve">
+    <value>Produção Estimada</value>
+  </data>
+  <data name="SHAKING OF THE BAGS" xml:space="preserve">
+    <value>Agitação dos sacos</value>
+  </data>
+  <data name="ON TIME (BAG UP)" xml:space="preserve">
+    <value>Na hora certa (bagagem)</value>
+  </data>
+  <data name="PAUSE TIME (BAG DOWN)" xml:space="preserve">
+    <value>Tempo de pausa (saco para baixo)</value>
+  </data>
+  <data name="BAG COMPACTION FOR MAXIMUM LEVEL REACHED" xml:space="preserve">
+    <value>Compactação do saco para nível máximo alcançado</value>
+  </data>
+  <data name="MAXIMUM NUMBER OF COMPACTIONS (BAG FULL)" xml:space="preserve">
+    <value>Número máximo de compactações (saco cheio)</value>
+  </data>
+  <data name="COMPACTIONS DONE FOR BAG" xml:space="preserve">
+    <value>Compactações feitas para bolsa</value>
+  </data>
+  <data name="STATISTICS" xml:space="preserve">
+    <value>Estatisticas</value>
+  </data>
+  <data name="AVERAGE BAG FILLING DURATION" xml:space="preserve">
+    <value>Duração Média de Enchimento do Saco</value>
+  </data>
+  <data name="PN COMMUNICATION OK" xml:space="preserve">
+    <value>Pn Comunicação OK</value>
+  </data>
+  <data name="PROFINET COMMUNICATION NOT OK" xml:space="preserve">
+    <value>Comunicação Profinet não está ok</value>
+  </data>
+  <data name="E-STOP - PUSH-BUTTON RELAY STATUS" xml:space="preserve">
+    <value>Parada de emergência - Status do relé de botão</value>
+  </data>
+  <data name="SYS - E-STOP - PUSH-BUTTON RELAY STATUS" xml:space="preserve">
+    <value>Sys - E-Stop - Status do relé de botão</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON COLLECTING SAFETY RELAY NOT OK" xml:space="preserve">
+    <value>Relé de segurança de coleta de botão Estop não está ok</value>
+  </data>
+  <data name="SYSTEM CONTROL PLC" xml:space="preserve">
+    <value>Controle do sistema Plc</value>
+  </data>
 </root>
