--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -9660,4 +9660,335 @@
     <value>Enable Filling For Production Through HMI Settings</value>
     <comment>InfoText Message</comment>
   </data>
+  <data name="M_INFO_EMPTYING_MODE" xml:space="preserve">
+    <value>Emptying Mode Is Activated. Restore HMI Settings For Production As Soon As Emptying Is Done</value>
+    <comment>InfoText Message</comment>
+  </data>
+  <data name="STORAGE" xml:space="preserve">
+    <value>Storage</value>
+  </data>
+  <data name="BAG_PRODUCTION" xml:space="preserve">
+    <value>Bag_Production</value>
+  </data>
+  <data name="KG_PRODUCTION" xml:space="preserve">
+    <value>Kg_Production</value>
+  </data>
+  <data name="BAGS STATION - BAGS" xml:space="preserve">
+    <value>Bags Station - Bags</value>
+  </data>
+  <data name="DASHBOARD EDITOR" xml:space="preserve">
+    <value>Dashboard Editor</value>
+  </data>
+  <data name="NO RECOVERY MODE" xml:space="preserve">
+    <value>No Recovery Mode</value>
+  </data>
+  <data name="RECOVERY MODE FOR EMPTY HOPPER" xml:space="preserve">
+    <value>Recovery Mode For Empty Hopper</value>
+  </data>
+  <data name="SAFETY BARRIERS NOT OK" xml:space="preserve">
+    <value>Safety Barriers Not Ok</value>
+  </data>
+  <data name="CONVEYOR LEFT LUBRICATION" xml:space="preserve">
+    <value>Conveyor Left Lubrication</value>
+  </data>
+  <data name="CONVEYOR RIGHT LUBRICATION" xml:space="preserve">
+    <value>Conveyor Right Lubrication</value>
+  </data>
+  <data name="DEBALER AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>Debaler Aux. Hydraulic Unit</value>
+  </data>
+  <data name="PREWASH WCE AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>Prewash Wce Aux. Hydraulic Unit</value>
+  </data>
+  <data name="NOT_BYPASSED" xml:space="preserve">
+    <value>Not_Bypassed</value>
+  </data>
+  <data name="OFF LINE FEEDING" xml:space="preserve">
+    <value>Off Line Feeding</value>
+  </data>
+  <data name="CABINET POWER SWITCH" xml:space="preserve">
+    <value>Cabinet Power Switch</value>
+  </data>
+  <data name="CABINET POWER SWITCH NOT OK" xml:space="preserve">
+    <value>Cabinet Power Switch Not Ok</value>
+  </data>
+  <data name="GRINDER AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>Grinder Aux. Hydraulic Unit</value>
+  </data>
+  <data name="SILO EMPTYING MODE ACTIVATED" xml:space="preserve">
+    <value>Silo Emptying Mode Activated</value>
+  </data>
+  <data name="NO EMPTYING" xml:space="preserve">
+    <value>No Emptying</value>
+  </data>
+  <data name="EMPTYING MODE SELECTED" xml:space="preserve">
+    <value>Emptying Mode Selected</value>
+  </data>
+  <data name="SILO EMPTYING MODE - BYPASS OF MINIMUM LEVEL" xml:space="preserve">
+    <value>Silo Emptying Mode - Bypass Of Minimum Level</value>
+  </data>
+  <data name="CHEMICAL CONCENTRATION SENSOR" xml:space="preserve">
+    <value>Chemical Concentration Sensor</value>
+  </data>
+  <data name="ANTIFOAM TO REACTOR 1" xml:space="preserve">
+    <value>Antifoam To Reactor 1</value>
+  </data>
+  <data name="ANTIFOAM TO REACTOR 2" xml:space="preserve">
+    <value>Antifoam To Reactor 2</value>
+  </data>
+  <data name="ANTIFOAM TO WASHING TANK" xml:space="preserve">
+    <value>Antifoam To Washing Tank</value>
+  </data>
+  <data name="MAXIMUM NUMBER OF AUTO-PURGE RESTART" xml:space="preserve">
+    <value>Maximum Number Of Auto-Purge Restart</value>
+  </data>
+  <data name="NO PURGE" xml:space="preserve">
+    <value>No Purge</value>
+  </data>
+  <data name="STOP FOR AUTO-PURGE" xml:space="preserve">
+    <value>Stop For Auto-Purge</value>
+  </data>
+  <data name="NO PADDLES STOPPING" xml:space="preserve">
+    <value>No Paddles Stopping</value>
+  </data>
+  <data name="PADDLES STOPPING SPEED SELECTED" xml:space="preserve">
+    <value>Paddles Stopping Speed Selected</value>
+  </data>
+  <data name="FLOWRATE SENSOR OK" xml:space="preserve">
+    <value>Flowrate Sensor Ok</value>
+  </data>
+  <data name="SENSOR NOT OK FOR MODULATION" xml:space="preserve">
+    <value>Sensor Not Ok For Modulation</value>
+  </data>
+  <data name="WATER NOT AVAILABLE" xml:space="preserve">
+    <value>Water Not Available</value>
+  </data>
+  <data name="ACTUAL SETPOINT" xml:space="preserve">
+    <value>Actual Setpoint</value>
+  </data>
+  <data name="CONSTANT MODE COMMAND" xml:space="preserve">
+    <value>Constant Mode Command</value>
+  </data>
+  <data name="MAINTENANCE COMMAND" xml:space="preserve">
+    <value>Maintenance Command</value>
+  </data>
+  <data name="MODULATION SETUP" xml:space="preserve">
+    <value>Modulation Setup</value>
+  </data>
+  <data name="NOT USED" xml:space="preserve">
+    <value>Not Used</value>
+  </data>
+  <data name="ABOVE LOW LEVEL" xml:space="preserve">
+    <value>Above Low Level</value>
+  </data>
+  <data name="SCREW STOPPED FOR MATERIAL BELOW LOW LEVEL" xml:space="preserve">
+    <value>Screw Stopped For Material Below Low Level</value>
+  </data>
+  <data name="AUTOMATIC FILTER" xml:space="preserve">
+    <value>Automatic Filter</value>
+  </data>
+  <data name="(1=EXT AIR FILTER READY)" xml:space="preserve">
+    <value>(1=Ext Air Filter Ready)</value>
+  </data>
+  <data name="EXTERNAL FILTER OFF" xml:space="preserve">
+    <value>External Filter Off</value>
+  </data>
+  <data name="BAGS STATION - SHAKE BAG" xml:space="preserve">
+    <value>Bags Station - Shake Bag</value>
+  </data>
+  <data name="COMMAND BAG UP" xml:space="preserve">
+    <value>Command Bag Up</value>
+  </data>
+  <data name="(1=UP)" xml:space="preserve">
+    <value>(1=Up)</value>
+  </data>
+  <data name="BAG SAFETY BARRIER" xml:space="preserve">
+    <value>Bag Safety Barrier</value>
+  </data>
+  <data name="BAG SAFETY BARRIERS NOT OK" xml:space="preserve">
+    <value>Bag Safety Barriers Not Ok</value>
+  </data>
+  <data name="BAG PRESENT" xml:space="preserve">
+    <value>Bag Present</value>
+  </data>
+  <data name="BAG NOT PRESENT" xml:space="preserve">
+    <value>Bag Not Present</value>
+  </data>
+  <data name="MATERIAL DIRECTED HERE" xml:space="preserve">
+    <value>Material Directed Here</value>
+  </data>
+  <data name="MATERIAL IS DIRECTED TO THE OTHER BAG" xml:space="preserve">
+    <value>Material Is Directed To The Other Bag</value>
+  </data>
+  <data name="BAGS STATION - DIVERTER" xml:space="preserve">
+    <value>Bags Station - Diverter</value>
+  </data>
+  <data name="BAGS STATION - BAG" xml:space="preserve">
+    <value>Bags Station - Bag</value>
+  </data>
+  <data name="BAG SHAKE REQUEST" xml:space="preserve">
+    <value>Bag Shake Request</value>
+  </data>
+  <data name="BAG PRESENT SENSOR" xml:space="preserve">
+    <value>Bag Present Sensor</value>
+  </data>
+  <data name="(1=PRESENT)" xml:space="preserve">
+    <value>(1=Present)</value>
+  </data>
+  <data name="BAG GREEN RED" xml:space="preserve">
+    <value>Bag Green Red</value>
+  </data>
+  <data name="BAG GREEN LAMP" xml:space="preserve">
+    <value>Bag Green Lamp</value>
+  </data>
+  <data name="(1= OK FLSH=FILLING)" xml:space="preserve">
+    <value>(1= Ok Flsh=Filling)</value>
+  </data>
+  <data name="BAG LAMP RED" xml:space="preserve">
+    <value>Bag Lamp Red</value>
+  </data>
+  <data name="BAG FULL" xml:space="preserve">
+    <value>Bag Full</value>
+  </data>
+  <data name="BAG NO MORE DETECTED" xml:space="preserve">
+    <value>Bag No More Detected</value>
+  </data>
+  <data name="BAG NOT FULL" xml:space="preserve">
+    <value>Bag Not Full</value>
+  </data>
+  <data name="BAG FULL. REMOVE BAG" xml:space="preserve">
+    <value>Bag Full. Remove Bag</value>
+  </data>
+  <data name="BAG MAXIMUM LEVEL NOT OK" xml:space="preserve">
+    <value>Bag Maximum Level Not Ok</value>
+  </data>
+  <data name="NO BAG LIFT UP" xml:space="preserve">
+    <value>No Bag Lift Up</value>
+  </data>
+  <data name="BAG LIFTING UP" xml:space="preserve">
+    <value>Bag Lifting Up</value>
+  </data>
+  <data name="SHAKING VALVE ENABLED" xml:space="preserve">
+    <value>Shaking Valve Enabled</value>
+  </data>
+  <data name="SHAKING VALVE NOT ENABLED" xml:space="preserve">
+    <value>Shaking Valve Not Enabled</value>
+  </data>
+  <data name="BAGS STATION - BAGS " xml:space="preserve">
+    <value>Bags Station - Bags</value>
+  </data>
+  <data name="BAGS STATION - MANAGER" xml:space="preserve">
+    <value>Bags Station - Manager</value>
+  </data>
+  <data name="SAFETY GREEN RED" xml:space="preserve">
+    <value>Safety Green Red</value>
+  </data>
+  <data name="SAFETY GREEN LAMP" xml:space="preserve">
+    <value>Safety Green Lamp</value>
+  </data>
+  <data name="(1= OK)" xml:space="preserve">
+    <value>(1= Ok)</value>
+  </data>
+  <data name="SAFETY RED LAMP" xml:space="preserve">
+    <value>Safety Red Lamp</value>
+  </data>
+  <data name="(SLOW =NOT OK FAST=ALARM)" xml:space="preserve">
+    <value>(Slow =Not Ok Fast=Alarm)</value>
+  </data>
+  <data name="SAFETY BARRIERS NOT OK TIMEOUT - BAGS CANNOT BE SHAKED" xml:space="preserve">
+    <value>Safety Barriers Not Ok Timeout - Bags Cannot Be Shaked</value>
+  </data>
+  <data name="ENABLED FOR FILLING BAG" xml:space="preserve">
+    <value>Enabled For Filling Bag</value>
+  </data>
+  <data name="FILLING NOT ENABLED - BAG" xml:space="preserve">
+    <value>Filling Not Enabled - Bag</value>
+  </data>
+  <data name="PRESENCE OF BAG" xml:space="preserve">
+    <value>Presence Of Bag</value>
+  </data>
+  <data name="BAG NOT PRESENT - BAG" xml:space="preserve">
+    <value>Bag Not Present - Bag</value>
+  </data>
+  <data name="AT LEAST ONE DEVICE IS NOT READY" xml:space="preserve">
+    <value>At Least One Device Is Not Ready</value>
+  </data>
+  <data name="SHAKING TIME OK" xml:space="preserve">
+    <value>Shaking Time Ok</value>
+  </data>
+  <data name="SHAKING TIME IS SET TO ZERO" xml:space="preserve">
+    <value>Shaking Time Is Set To Zero</value>
+  </data>
+  <data name="COMPACTION TIME OK" xml:space="preserve">
+    <value>Compaction Time Ok</value>
+  </data>
+  <data name="COMPACTION TIME IS SET TO ZERO" xml:space="preserve">
+    <value>Compaction Time Is Set To Zero</value>
+  </data>
+  <data name="COMPACTION NOT IN PROGRESS" xml:space="preserve">
+    <value>Compaction Not In Progress</value>
+  </data>
+  <data name="BAG COMPACTION FOR MAXIMUM LEVEL" xml:space="preserve">
+    <value>Bag Compaction For Maximum Level</value>
+  </data>
+  <data name="NOT FULL BAG" xml:space="preserve">
+    <value>Not Full Bag</value>
+  </data>
+  <data name="FILLING COMPLETED OF BAG" xml:space="preserve">
+    <value>Filling Completed Of Bag</value>
+  </data>
+  <data name="NOT FULL BAGS" xml:space="preserve">
+    <value>Not Full Bags</value>
+  </data>
+  <data name="FILLING COMPLETED OF BOTH BAGS" xml:space="preserve">
+    <value>Filling Completed Of Both Bags</value>
+  </data>
+  <data name="BAGS PER HOUR" xml:space="preserve">
+    <value>Bags Per Hour</value>
+  </data>
+  <data name="ESTIMATED PRODUCTION" xml:space="preserve">
+    <value>Estimated Production</value>
+  </data>
+  <data name="SHAKING OF THE BAGS" xml:space="preserve">
+    <value>Shaking Of The Bags</value>
+  </data>
+  <data name="ON TIME (BAG UP)" xml:space="preserve">
+    <value>On Time (Bag Up)</value>
+  </data>
+  <data name="PAUSE TIME (BAG DOWN)" xml:space="preserve">
+    <value>Pause Time (Bag Down)</value>
+  </data>
+  <data name="BAG COMPACTION FOR MAXIMUM LEVEL REACHED" xml:space="preserve">
+    <value>Bag Compaction For Maximum Level Reached</value>
+  </data>
+  <data name="MAXIMUM NUMBER OF COMPACTIONS (BAG FULL)" xml:space="preserve">
+    <value>Maximum Number Of Compactions (Bag Full)</value>
+  </data>
+  <data name="COMPACTIONS DONE FOR BAG" xml:space="preserve">
+    <value>Compactions Done For Bag</value>
+  </data>
+  <data name="STATISTICS" xml:space="preserve">
+    <value>Statistics</value>
+  </data>
+  <data name="AVERAGE BAG FILLING DURATION" xml:space="preserve">
+    <value>Average Bag Filling Duration</value>
+  </data>
+  <data name="PN COMMUNICATION OK" xml:space="preserve">
+    <value>Pn Communication Ok</value>
+  </data>
+  <data name="PROFINET COMMUNICATION NOT OK" xml:space="preserve">
+    <value>Profinet Communication Not Ok</value>
+  </data>
+  <data name="E-STOP - PUSH-BUTTON RELAY STATUS" xml:space="preserve">
+    <value>E-Stop - Push-Button Relay Status</value>
+  </data>
+  <data name="SYS - E-STOP - PUSH-BUTTON RELAY STATUS" xml:space="preserve">
+    <value>Sys - E-Stop - Push-Button Relay Status</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON COLLECTING SAFETY RELAY NOT OK" xml:space="preserve">
+    <value>Estop Push-Button Collecting Safety Relay Not Ok</value>
+  </data>
+  <data name="SYSTEM CONTROL PLC" xml:space="preserve">
+    <value>System Control Plc</value>
+  </data>
 </root>
