--- a/Prevu.Localization/Properties/Resources.ro.resx
+++ b/Prevu.Localization/Properties/Resources.ro.resx
@@ -9303,4 +9303,334 @@
   <data name="M_INFO_FILLING_DISAB" xml:space="preserve">
     <value>Activați umplerea pentru producție prin setări HMI</value>
   </data>
+  <data name="M_INFO_EMPTYING_MODE" xml:space="preserve">
+    <value>Modul de golire este activat. Restabiliți setările HMI pentru producție de îndată ce se termină golirea</value>
+  </data>
+  <data name="STORAGE" xml:space="preserve">
+    <value>Depozitare</value>
+  </data>
+  <data name="BAG_PRODUCTION" xml:space="preserve">
+    <value>Sac_Producție</value>
+  </data>
+  <data name="KG_PRODUCTION" xml:space="preserve">
+    <value>Kg_Producție</value>
+  </data>
+  <data name="BAGS STATION - BAGS" xml:space="preserve">
+    <value>Bags Station - Genți</value>
+  </data>
+  <data name="DASHBOARD EDITOR" xml:space="preserve">
+    <value>Editor tablou de bord</value>
+  </data>
+  <data name="NO RECOVERY MODE" xml:space="preserve">
+    <value>Fără mod de recuperare</value>
+  </data>
+  <data name="RECOVERY MODE FOR EMPTY HOPPER" xml:space="preserve">
+    <value>Modul de recuperare pentru buncărul gol</value>
+  </data>
+  <data name="SAFETY BARRIERS NOT OK" xml:space="preserve">
+    <value>Bariere de siguranță nu sunt ok</value>
+  </data>
+  <data name="CONVEYOR LEFT LUBRICATION" xml:space="preserve">
+    <value>Lubrifiere din stânga benzii transportoare</value>
+  </data>
+  <data name="CONVEYOR RIGHT LUBRICATION" xml:space="preserve">
+    <value>Lubrifiere dreapta a benzii transportoare</value>
+  </data>
+  <data name="DEBALER AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>Debaler Aux. Unitate hidraulica</value>
+  </data>
+  <data name="PREWASH WCE AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>Prespălare Wce Aux. Unitate hidraulica</value>
+  </data>
+  <data name="NOT_BYPASSED" xml:space="preserve">
+    <value>Nu_Ocolit</value>
+  </data>
+  <data name="OFF LINE FEEDING" xml:space="preserve">
+    <value>Alimentare offline</value>
+  </data>
+  <data name="CABINET POWER SWITCH" xml:space="preserve">
+    <value>Întrerupător de alimentare a dulapului</value>
+  </data>
+  <data name="CABINET POWER SWITCH NOT OK" xml:space="preserve">
+    <value>Comutatorul de alimentare a dulapului nu este ok</value>
+  </data>
+  <data name="GRINDER AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>Grinder Aux. Unitate hidraulica</value>
+  </data>
+  <data name="SILO EMPTYING MODE ACTIVATED" xml:space="preserve">
+    <value>Modul de golire a silozului activat</value>
+  </data>
+  <data name="NO EMPTYING" xml:space="preserve">
+    <value>Fără golire</value>
+  </data>
+  <data name="EMPTYING MODE SELECTED" xml:space="preserve">
+    <value>Mod de golire selectat</value>
+  </data>
+  <data name="SILO EMPTYING MODE - BYPASS OF MINIMUM LEVEL" xml:space="preserve">
+    <value>Mod de golire a silozului - Bypass la nivelul minim</value>
+  </data>
+  <data name="CHEMICAL CONCENTRATION SENSOR" xml:space="preserve">
+    <value>Senzor de concentrație chimică</value>
+  </data>
+  <data name="ANTIFOAM TO REACTOR 1" xml:space="preserve">
+    <value>Antispumă către reactor 1</value>
+  </data>
+  <data name="ANTIFOAM TO REACTOR 2" xml:space="preserve">
+    <value>Antispumă către reactorul 2</value>
+  </data>
+  <data name="ANTIFOAM TO WASHING TANK" xml:space="preserve">
+    <value>Antispumă pentru rezervorul de spălare</value>
+  </data>
+  <data name="MAXIMUM NUMBER OF AUTO-PURGE RESTART" xml:space="preserve">
+    <value>Numărul maxim de reporniri cu purjare automată</value>
+  </data>
+  <data name="NO PURGE" xml:space="preserve">
+    <value>Fără epurare</value>
+  </data>
+  <data name="STOP FOR AUTO-PURGE" xml:space="preserve">
+    <value>Opriți pentru purjare automată</value>
+  </data>
+  <data name="NO PADDLES STOPPING" xml:space="preserve">
+    <value>Nu se opresc vâslele</value>
+  </data>
+  <data name="PADDLES STOPPING SPEED SELECTED" xml:space="preserve">
+    <value>Viteza de oprire a paletelor selectată</value>
+  </data>
+  <data name="FLOWRATE SENSOR OK" xml:space="preserve">
+    <value>Senzor debit Ok</value>
+  </data>
+  <data name="SENSOR NOT OK FOR MODULATION" xml:space="preserve">
+    <value>Senzorul nu este ok pentru modulare</value>
+  </data>
+  <data name="WATER NOT AVAILABLE" xml:space="preserve">
+    <value>Apa nu este disponibilă</value>
+  </data>
+  <data name="ACTUAL SETPOINT" xml:space="preserve">
+    <value>Punct de referință real</value>
+  </data>
+  <data name="CONSTANT MODE COMMAND" xml:space="preserve">
+    <value>Comanda mod constant</value>
+  </data>
+  <data name="MAINTENANCE COMMAND" xml:space="preserve">
+    <value>Comanda de întreținere</value>
+  </data>
+  <data name="MODULATION SETUP" xml:space="preserve">
+    <value>Configurare modulare</value>
+  </data>
+  <data name="NOT USED" xml:space="preserve">
+    <value>Nefolosit</value>
+  </data>
+  <data name="ABOVE LOW LEVEL" xml:space="preserve">
+    <value>Deasupra nivelului scăzut</value>
+  </data>
+  <data name="SCREW STOPPED FOR MATERIAL BELOW LOW LEVEL" xml:space="preserve">
+    <value>Șurub oprit pentru material sub nivelul scăzut</value>
+  </data>
+  <data name="AUTOMATIC FILTER" xml:space="preserve">
+    <value>Filtru automat</value>
+  </data>
+  <data name="(1=EXT AIR FILTER READY)" xml:space="preserve">
+    <value>(1=Ext Air Filter Ready)</value>
+  </data>
+  <data name="EXTERNAL FILTER OFF" xml:space="preserve">
+    <value>Filtrul extern dezactivat</value>
+  </data>
+  <data name="BAGS STATION - SHAKE BAG" xml:space="preserve">
+    <value>Bags Station - Shake Bag</value>
+  </data>
+  <data name="COMMAND BAG UP" xml:space="preserve">
+    <value>Comandă Bag Up</value>
+  </data>
+  <data name="(1=UP)" xml:space="preserve">
+    <value>(1=Sus)</value>
+  </data>
+  <data name="BAG SAFETY BARRIER" xml:space="preserve">
+    <value>Barieră de siguranță pentru sac</value>
+  </data>
+  <data name="BAG SAFETY BARRIERS NOT OK" xml:space="preserve">
+    <value>Bariere de siguranță pentru sac nu sunt ok</value>
+  </data>
+  <data name="BAG PRESENT" xml:space="preserve">
+    <value>Geanta Prezent</value>
+  </data>
+  <data name="BAG NOT PRESENT" xml:space="preserve">
+    <value>Geanta nu este prezentă</value>
+  </data>
+  <data name="MATERIAL DIRECTED HERE" xml:space="preserve">
+    <value>Material regizat aici</value>
+  </data>
+  <data name="MATERIAL IS DIRECTED TO THE OTHER BAG" xml:space="preserve">
+    <value>Materialul este direcționat către cealaltă geantă</value>
+  </data>
+  <data name="BAGS STATION - DIVERTER" xml:space="preserve">
+    <value>Stație de Genți - Deviator</value>
+  </data>
+  <data name="BAGS STATION - BAG" xml:space="preserve">
+    <value>Bags Station - Geanta</value>
+  </data>
+  <data name="BAG SHAKE REQUEST" xml:space="preserve">
+    <value>Solicitare de agitare a pungii</value>
+  </data>
+  <data name="BAG PRESENT SENSOR" xml:space="preserve">
+    <value>Senzor de prezentare a pungii</value>
+  </data>
+  <data name="(1=PRESENT)" xml:space="preserve">
+    <value>(1=Prezentă)</value>
+  </data>
+  <data name="BAG GREEN RED" xml:space="preserve">
+    <value>Geanta Verde Rosie</value>
+  </data>
+  <data name="BAG GREEN LAMP" xml:space="preserve">
+    <value>Lampă verde geantă</value>
+  </data>
+  <data name="(1= OK FLSH=FILLING)" xml:space="preserve">
+    <value>(1= Ok Flsh=Umplere)</value>
+  </data>
+  <data name="BAG LAMP RED" xml:space="preserve">
+    <value>Lampă pentru geantă roșie</value>
+  </data>
+  <data name="BAG FULL" xml:space="preserve">
+    <value>Geanta plină</value>
+  </data>
+  <data name="BAG NO MORE DETECTED" xml:space="preserve">
+    <value>Bagă nu mai este detectată</value>
+  </data>
+  <data name="BAG NOT FULL" xml:space="preserve">
+    <value>Geanta nu este plină</value>
+  </data>
+  <data name="BAG FULL. REMOVE BAG" xml:space="preserve">
+    <value>Geanta plină. Scoateți geanta</value>
+  </data>
+  <data name="BAG MAXIMUM LEVEL NOT OK" xml:space="preserve">
+    <value>Nivelul maxim al sacului Nu este ok</value>
+  </data>
+  <data name="NO BAG LIFT UP" xml:space="preserve">
+    <value>Fără ridicare a sacului</value>
+  </data>
+  <data name="BAG LIFTING UP" xml:space="preserve">
+    <value>Ridicarea sacului</value>
+  </data>
+  <data name="SHAKING VALVE ENABLED" xml:space="preserve">
+    <value>Supapa de agitare activată</value>
+  </data>
+  <data name="SHAKING VALVE NOT ENABLED" xml:space="preserve">
+    <value>Supapa de agitare nu este activată</value>
+  </data>
+  <data name="BAGS STATION - BAGS " xml:space="preserve">
+    <value>Bags Station - Genți</value>
+  </data>
+  <data name="BAGS STATION - MANAGER" xml:space="preserve">
+    <value>Stația de Genți - Manager</value>
+  </data>
+  <data name="SAFETY GREEN RED" xml:space="preserve">
+    <value>Siguranță Verde Roșu</value>
+  </data>
+  <data name="SAFETY GREEN LAMP" xml:space="preserve">
+    <value>Lampă verde de siguranță</value>
+  </data>
+  <data name="(1= OK)" xml:space="preserve">
+    <value>(1= OK)</value>
+  </data>
+  <data name="SAFETY RED LAMP" xml:space="preserve">
+    <value>Lampă roșie de siguranță</value>
+  </data>
+  <data name="(SLOW =NOT OK FAST=ALARM)" xml:space="preserve">
+    <value>(Incet = Nu este ok Rapid = Alarmă)</value>
+  </data>
+  <data name="SAFETY BARRIERS NOT OK TIMEOUT - BAGS CANNOT BE SHAKED" xml:space="preserve">
+    <value>Barierele de siguranță nu sunt în regulă</value>
+  </data>
+  <data name="ENABLED FOR FILLING BAG" xml:space="preserve">
+    <value>Activat pentru umplerea sacului</value>
+  </data>
+  <data name="FILLING NOT ENABLED - BAG" xml:space="preserve">
+    <value>Umplerea nu este activată - Pungă</value>
+  </data>
+  <data name="PRESENCE OF BAG" xml:space="preserve">
+    <value>Prezența sacului</value>
+  </data>
+  <data name="BAG NOT PRESENT - BAG" xml:space="preserve">
+    <value>Geanta nu este prezentă - Geantă</value>
+  </data>
+  <data name="AT LEAST ONE DEVICE IS NOT READY" xml:space="preserve">
+    <value>Cel puțin un dispozitiv nu este pregătit</value>
+  </data>
+  <data name="SHAKING TIME OK" xml:space="preserve">
+    <value>Timp de agitare Ok</value>
+  </data>
+  <data name="SHAKING TIME IS SET TO ZERO" xml:space="preserve">
+    <value>Timpul de agitare este setat la zero</value>
+  </data>
+  <data name="COMPACTION TIME OK" xml:space="preserve">
+    <value>Timp de compactare ok</value>
+  </data>
+  <data name="COMPACTION TIME IS SET TO ZERO" xml:space="preserve">
+    <value>Timpul de compactare este setat la zero</value>
+  </data>
+  <data name="COMPACTION NOT IN PROGRESS" xml:space="preserve">
+    <value>Compactarea nu este în curs</value>
+  </data>
+  <data name="BAG COMPACTION FOR MAXIMUM LEVEL" xml:space="preserve">
+    <value>Compactare sac pentru nivel maxim</value>
+  </data>
+  <data name="NOT FULL BAG" xml:space="preserve">
+    <value>Nu Geanta plină</value>
+  </data>
+  <data name="FILLING COMPLETED OF BAG" xml:space="preserve">
+    <value>Umplerea sacului finalizat</value>
+  </data>
+  <data name="NOT FULL BAGS" xml:space="preserve">
+    <value>Nu saci plini</value>
+  </data>
+  <data name="FILLING COMPLETED OF BOTH BAGS" xml:space="preserve">
+    <value>Umplerea ambelor pungi a fost finalizată</value>
+  </data>
+  <data name="BAGS PER HOUR" xml:space="preserve">
+    <value>Saci pe oră</value>
+  </data>
+  <data name="ESTIMATED PRODUCTION" xml:space="preserve">
+    <value>Productie estimata</value>
+  </data>
+  <data name="SHAKING OF THE BAGS" xml:space="preserve">
+    <value>Scuturarea Pungilor</value>
+  </data>
+  <data name="ON TIME (BAG UP)" xml:space="preserve">
+    <value>La timp (În bagajele)</value>
+  </data>
+  <data name="PAUSE TIME (BAG DOWN)" xml:space="preserve">
+    <value>Timp de pauză (Bag Down)</value>
+  </data>
+  <data name="BAG COMPACTION FOR MAXIMUM LEVEL REACHED" xml:space="preserve">
+    <value>Compactarea sacului pentru nivelul maxim atins</value>
+  </data>
+  <data name="MAXIMUM NUMBER OF COMPACTIONS (BAG FULL)" xml:space="preserve">
+    <value>Numărul maxim de compactări (sacul plin)</value>
+  </data>
+  <data name="COMPACTIONS DONE FOR BAG" xml:space="preserve">
+    <value>Compactări făcute pentru sac</value>
+  </data>
+  <data name="STATISTICS" xml:space="preserve">
+    <value>Statistici</value>
+  </data>
+  <data name="AVERAGE BAG FILLING DURATION" xml:space="preserve">
+    <value>Durata medie de umplere a sacului</value>
+  </data>
+  <data name="PN COMMUNICATION OK" xml:space="preserve">
+    <value>Pn Comunicare Ok</value>
+  </data>
+  <data name="PROFINET COMMUNICATION NOT OK" xml:space="preserve">
+    <value>Comunicarea Profinet nu este ok</value>
+  </data>
+  <data name="E-STOP - PUSH-BUTTON RELAY STATUS" xml:space="preserve">
+    <value>E-Stop - Stare releu buton</value>
+  </data>
+  <data name="SYS - E-STOP - PUSH-BUTTON RELAY STATUS" xml:space="preserve">
+    <value>Sys - E-Stop - Stare releu buton</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON COLLECTING SAFETY RELAY NOT OK" xml:space="preserve">
+    <value>Releu de siguranță pentru colectarea butonului de oprire nu este în regulă</value>
+  </data>
+  <data name="SYSTEM CONTROL PLC" xml:space="preserve">
+    <value>System Control Plc</value>
+  </data>
 </root>
