--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -9303,4 +9303,334 @@
   <data name="M_INFO_FILLING_DISAB" xml:space="preserve">
     <value>通过 HMI 设置启用生产灌装</value>
   </data>
+  <data name="M_INFO_EMPTYING_MODE" xml:space="preserve">
+    <value>排空模式已激活。清空完成后立即恢复生产的 HMI 设置</value>
+  </data>
+  <data name="STORAGE" xml:space="preserve">
+    <value>贮存</value>
+  </data>
+  <data name="BAG_PRODUCTION" xml:space="preserve">
+    <value>包袋_生产</value>
+  </data>
+  <data name="KG_PRODUCTION" xml:space="preserve">
+    <value>公斤_产量</value>
+  </data>
+  <data name="BAGS STATION - BAGS" xml:space="preserve">
+    <value>箱包站 - 箱包</value>
+  </data>
+  <data name="DASHBOARD EDITOR" xml:space="preserve">
+    <value>仪表板编辑器</value>
+  </data>
+  <data name="NO RECOVERY MODE" xml:space="preserve">
+    <value>无恢复模式</value>
+  </data>
+  <data name="RECOVERY MODE FOR EMPTY HOPPER" xml:space="preserve">
+    <value>空料斗恢复模式</value>
+  </data>
+  <data name="SAFETY BARRIERS NOT OK" xml:space="preserve">
+    <value>安全屏障不行</value>
+  </data>
+  <data name="CONVEYOR LEFT LUBRICATION" xml:space="preserve">
+    <value>输送机左侧润滑</value>
+  </data>
+  <data name="CONVEYOR RIGHT LUBRICATION" xml:space="preserve">
+    <value>传送带右侧润滑</value>
+  </data>
+  <data name="DEBALER AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>解包器辅助。液压单元</value>
+  </data>
+  <data name="PREWASH WCE AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>预洗 Wce 辅助。液压单元</value>
+  </data>
+  <data name="NOT_BYPASSED" xml:space="preserve">
+    <value>未绕过</value>
+  </data>
+  <data name="OFF LINE FEEDING" xml:space="preserve">
+    <value>离线送料</value>
+  </data>
+  <data name="CABINET POWER SWITCH" xml:space="preserve">
+    <value>机柜电源开关</value>
+  </data>
+  <data name="CABINET POWER SWITCH NOT OK" xml:space="preserve">
+    <value>机柜电源开关不正常</value>
+  </data>
+  <data name="GRINDER AUX. HYDRAULIC UNIT" xml:space="preserve">
+    <value>研磨机辅助。液压单元</value>
+  </data>
+  <data name="SILO EMPTYING MODE ACTIVATED" xml:space="preserve">
+    <value>筒仓清空模式已激活</value>
+  </data>
+  <data name="NO EMPTYING" xml:space="preserve">
+    <value>禁止清空</value>
+  </data>
+  <data name="EMPTYING MODE SELECTED" xml:space="preserve">
+    <value>已选择清空模式</value>
+  </data>
+  <data name="SILO EMPTYING MODE - BYPASS OF MINIMUM LEVEL" xml:space="preserve">
+    <value>筒仓清空模式 - 绕过最低液位</value>
+  </data>
+  <data name="CHEMICAL CONCENTRATION SENSOR" xml:space="preserve">
+    <value>化学浓度传感器</value>
+  </data>
+  <data name="ANTIFOAM TO REACTOR 1" xml:space="preserve">
+    <value>消泡剂至反应器 1</value>
+  </data>
+  <data name="ANTIFOAM TO REACTOR 2" xml:space="preserve">
+    <value>Reactor 2 消泡剂</value>
+  </data>
+  <data name="ANTIFOAM TO WASHING TANK" xml:space="preserve">
+    <value>洗涤槽消泡剂</value>
+  </data>
+  <data name="MAXIMUM NUMBER OF AUTO-PURGE RESTART" xml:space="preserve">
+    <value>自动清除重启最大次数</value>
+  </data>
+  <data name="NO PURGE" xml:space="preserve">
+    <value>无清除</value>
+  </data>
+  <data name="STOP FOR AUTO-PURGE" xml:space="preserve">
+    <value>停止自动清除</value>
+  </data>
+  <data name="NO PADDLES STOPPING" xml:space="preserve">
+    <value>没有桨停止</value>
+  </data>
+  <data name="PADDLES STOPPING SPEED SELECTED" xml:space="preserve">
+    <value>选择桨停止速度</value>
+  </data>
+  <data name="FLOWRATE SENSOR OK" xml:space="preserve">
+    <value>流量传感器正常</value>
+  </data>
+  <data name="SENSOR NOT OK FOR MODULATION" xml:space="preserve">
+    <value>传感器不适用于调制</value>
+  </data>
+  <data name="WATER NOT AVAILABLE" xml:space="preserve">
+    <value>没有水</value>
+  </data>
+  <data name="ACTUAL SETPOINT" xml:space="preserve">
+    <value>实际设定值</value>
+  </data>
+  <data name="CONSTANT MODE COMMAND" xml:space="preserve">
+    <value>恒定模式命令</value>
+  </data>
+  <data name="MAINTENANCE COMMAND" xml:space="preserve">
+    <value>维护指挥部</value>
+  </data>
+  <data name="MODULATION SETUP" xml:space="preserve">
+    <value>调制设置</value>
+  </data>
+  <data name="NOT USED" xml:space="preserve">
+    <value>不曾用过</value>
+  </data>
+  <data name="ABOVE LOW LEVEL" xml:space="preserve">
+    <value>高于低水平</value>
+  </data>
+  <data name="SCREW STOPPED FOR MATERIAL BELOW LOW LEVEL" xml:space="preserve">
+    <value>物料低于低位时螺杆停止</value>
+  </data>
+  <data name="AUTOMATIC FILTER" xml:space="preserve">
+    <value>自动过滤器</value>
+  </data>
+  <data name="(1=EXT AIR FILTER READY)" xml:space="preserve">
+    <value>（1=外部空气过滤器就绪）</value>
+  </data>
+  <data name="EXTERNAL FILTER OFF" xml:space="preserve">
+    <value>外部滤波器关闭</value>
+  </data>
+  <data name="BAGS STATION - SHAKE BAG" xml:space="preserve">
+    <value>袋站 - 摇袋</value>
+  </data>
+  <data name="COMMAND BAG UP" xml:space="preserve">
+    <value>命令包起来</value>
+  </data>
+  <data name="(1=UP)" xml:space="preserve">
+    <value>(1=向上)</value>
+  </data>
+  <data name="BAG SAFETY BARRIER" xml:space="preserve">
+    <value>袋子安全屏障</value>
+  </data>
+  <data name="BAG SAFETY BARRIERS NOT OK" xml:space="preserve">
+    <value>袋子安全屏障不好</value>
+  </data>
+  <data name="BAG PRESENT" xml:space="preserve">
+    <value>袋礼物</value>
+  </data>
+  <data name="BAG NOT PRESENT" xml:space="preserve">
+    <value>袋子不存在</value>
+  </data>
+  <data name="MATERIAL DIRECTED HERE" xml:space="preserve">
+    <value>材料在这里指导</value>
+  </data>
+  <data name="MATERIAL IS DIRECTED TO THE OTHER BAG" xml:space="preserve">
+    <value>材料被定向到另一个袋子</value>
+  </data>
+  <data name="BAGS STATION - DIVERTER" xml:space="preserve">
+    <value>行李站 - 转向器</value>
+  </data>
+  <data name="BAGS STATION - BAG" xml:space="preserve">
+    <value>箱包站 - 箱包</value>
+  </data>
+  <data name="BAG SHAKE REQUEST" xml:space="preserve">
+    <value>袋子震动请求</value>
+  </data>
+  <data name="BAG PRESENT SENSOR" xml:space="preserve">
+    <value>袋子存在传感器</value>
+  </data>
+  <data name="(1=PRESENT)" xml:space="preserve">
+    <value>(1=现在)</value>
+  </data>
+  <data name="BAG GREEN RED" xml:space="preserve">
+    <value>袋 绿色 红色</value>
+  </data>
+  <data name="BAG GREEN LAMP" xml:space="preserve">
+    <value>袋绿灯</value>
+  </data>
+  <data name="(1= OK FLSH=FILLING)" xml:space="preserve">
+    <value>(1=确定Flsh=填充)</value>
+  </data>
+  <data name="BAG LAMP RED" xml:space="preserve">
+    <value>袋灯红色</value>
+  </data>
+  <data name="BAG FULL" xml:space="preserve">
+    <value>袋满</value>
+  </data>
+  <data name="BAG NO MORE DETECTED" xml:space="preserve">
+    <value>不再检测到袋子</value>
+  </data>
+  <data name="BAG NOT FULL" xml:space="preserve">
+    <value>袋子未满</value>
+  </data>
+  <data name="BAG FULL. REMOVE BAG" xml:space="preserve">
+    <value>袋子满了。取出袋子</value>
+  </data>
+  <data name="BAG MAXIMUM LEVEL NOT OK" xml:space="preserve">
+    <value>袋子最大级别不正常</value>
+  </data>
+  <data name="NO BAG LIFT UP" xml:space="preserve">
+    <value>无需提起行李</value>
+  </data>
+  <data name="BAG LIFTING UP" xml:space="preserve">
+    <value>袋子提起</value>
+  </data>
+  <data name="SHAKING VALVE ENABLED" xml:space="preserve">
+    <value>启用振动阀</value>
+  </data>
+  <data name="SHAKING VALVE NOT ENABLED" xml:space="preserve">
+    <value>振动阀未启用</value>
+  </data>
+  <data name="BAGS STATION - BAGS " xml:space="preserve">
+    <value>箱包站 - 箱包</value>
+  </data>
+  <data name="BAGS STATION - MANAGER" xml:space="preserve">
+    <value>行李站 - 经理</value>
+  </data>
+  <data name="SAFETY GREEN RED" xml:space="preserve">
+    <value>安全绿红</value>
+  </data>
+  <data name="SAFETY GREEN LAMP" xml:space="preserve">
+    <value>安全绿灯</value>
+  </data>
+  <data name="(1= OK)" xml:space="preserve">
+    <value>（1=好的）</value>
+  </data>
+  <data name="SAFETY RED LAMP" xml:space="preserve">
+    <value>安全红灯</value>
+  </data>
+  <data name="(SLOW =NOT OK FAST=ALARM)" xml:space="preserve">
+    <value>（慢=不好快=警报）</value>
+  </data>
+  <data name="SAFETY BARRIERS NOT OK TIMEOUT - BAGS CANNOT BE SHAKED" xml:space="preserve">
+    <value>安全屏障不行超时 - 袋子不能摇晃</value>
+  </data>
+  <data name="ENABLED FOR FILLING BAG" xml:space="preserve">
+    <value>可用于填充袋</value>
+  </data>
+  <data name="FILLING NOT ENABLED - BAG" xml:space="preserve">
+    <value>无法填充 - 袋子</value>
+  </data>
+  <data name="PRESENCE OF BAG" xml:space="preserve">
+    <value>包的存在</value>
+  </data>
+  <data name="BAG NOT PRESENT - BAG" xml:space="preserve">
+    <value>袋子不存在 - 袋子</value>
+  </data>
+  <data name="AT LEAST ONE DEVICE IS NOT READY" xml:space="preserve">
+    <value>至少一台设备未准备好</value>
+  </data>
+  <data name="SHAKING TIME OK" xml:space="preserve">
+    <value>摇晃时间确定</value>
+  </data>
+  <data name="SHAKING TIME IS SET TO ZERO" xml:space="preserve">
+    <value>摇动时间设置为零</value>
+  </data>
+  <data name="COMPACTION TIME OK" xml:space="preserve">
+    <value>压实时间确定</value>
+  </data>
+  <data name="COMPACTION TIME IS SET TO ZERO" xml:space="preserve">
+    <value>压实时间设置为零</value>
+  </data>
+  <data name="COMPACTION NOT IN PROGRESS" xml:space="preserve">
+    <value>压实未进行</value>
+  </data>
+  <data name="BAG COMPACTION FOR MAXIMUM LEVEL" xml:space="preserve">
+    <value>最大程度压实袋子</value>
+  </data>
+  <data name="NOT FULL BAG" xml:space="preserve">
+    <value>袋子未满</value>
+  </data>
+  <data name="FILLING COMPLETED OF BAG" xml:space="preserve">
+    <value>袋子充填完成</value>
+  </data>
+  <data name="NOT FULL BAGS" xml:space="preserve">
+    <value>行李未满</value>
+  </data>
+  <data name="FILLING COMPLETED OF BOTH BAGS" xml:space="preserve">
+    <value>两个袋子均已灌装完毕</value>
+  </data>
+  <data name="BAGS PER HOUR" xml:space="preserve">
+    <value>每小时袋数</value>
+  </data>
+  <data name="ESTIMATED PRODUCTION" xml:space="preserve">
+    <value>预计产量</value>
+  </data>
+  <data name="SHAKING OF THE BAGS" xml:space="preserve">
+    <value>晃动袋子</value>
+  </data>
+  <data name="ON TIME (BAG UP)" xml:space="preserve">
+    <value>准时（行李）</value>
+  </data>
+  <data name="PAUSE TIME (BAG DOWN)" xml:space="preserve">
+    <value>暂停时间（放下行李）</value>
+  </data>
+  <data name="BAG COMPACTION FOR MAXIMUM LEVEL REACHED" xml:space="preserve">
+    <value>压实袋子以达到最大水平</value>
+  </data>
+  <data name="MAXIMUM NUMBER OF COMPACTIONS (BAG FULL)" xml:space="preserve">
+    <value>最大压实次数（袋满）</value>
+  </data>
+  <data name="COMPACTIONS DONE FOR BAG" xml:space="preserve">
+    <value>袋子压实完成</value>
+  </data>
+  <data name="STATISTICS" xml:space="preserve">
+    <value>统计数据</value>
+  </data>
+  <data name="AVERAGE BAG FILLING DURATION" xml:space="preserve">
+    <value>平均装袋时间</value>
+  </data>
+  <data name="PN COMMUNICATION OK" xml:space="preserve">
+    <value>Pn 通讯正常</value>
+  </data>
+  <data name="PROFINET COMMUNICATION NOT OK" xml:space="preserve">
+    <value>Profinet 通讯不正常</value>
+  </data>
+  <data name="E-STOP - PUSH-BUTTON RELAY STATUS" xml:space="preserve">
+    <value>急停 - 按钮继电器状态</value>
+  </data>
+  <data name="SYS - E-STOP - PUSH-BUTTON RELAY STATUS" xml:space="preserve">
+    <value>系统 - 急停 - 按钮继电器状态</value>
+  </data>
+  <data name="ESTOP PUSH-BUTTON COLLECTING SAFETY RELAY NOT OK" xml:space="preserve">
+    <value>急停按钮收集安全继电器不正常</value>
+  </data>
+  <data name="SYSTEM CONTROL PLC" xml:space="preserve">
+    <value>系统控制PLC</value>
+  </data>
 </root>
